// Package builder å®ç°åŒºå—æ„å»ºæœåŠ¡
package builder

import (
	"context"
	"encoding/binary"
	"fmt"
	"math/big"
	"time"

	"github.com/weisyn/v1/internal/core/block/difficulty"
	core "github.com/weisyn/v1/pb/blockchain/block"
	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
	"github.com/weisyn/v1/pkg/interfaces/tx"
)

// buildCandidate æ„å»ºå€™é€‰åŒºå—
//
// ğŸ¯ **å€™é€‰åŒºå—æ„å»ºæ ¸å¿ƒé€»è¾‘**
//
// å®Œæ•´æ„å»ºæµç¨‹ï¼š
// 1. æ„å»ºCoinbaseäº¤æ˜“ï¼ˆæ¿€åŠ±äº¤æ˜“ï¼‰
// 2. ç»„è£…å®Œæ•´äº¤æ˜“åˆ—è¡¨
// 3. æ„å»ºåŒºå—å¤´
// 4. ç»„è£…åŒºå—ä½“
// 5. è®¡ç®—åŒºå—å“ˆå¸Œ
// 6. è¿”å›å€™é€‰åŒºå—
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡
//   - currentHeight: å½“å‰åŒºå—é«˜åº¦
//   - parentHash: çˆ¶åŒºå—å“ˆå¸Œ
//   - candidateTxs: å€™é€‰äº¤æ˜“åˆ—è¡¨
//
// è¿”å›ï¼š
//   - *core.Block: å€™é€‰åŒºå—
//   - error: æ„å»ºé”™è¯¯
func (s *Service) buildCandidate(
	ctx context.Context,
	currentHeight uint64,
	parentHash []byte,
	candidateTxs []*transaction.Transaction,
) (*core.Block, error) {
	// ğŸ”§ è®¡ç®—ä¸‹ä¸€ä¸ªåŒºå—çš„é«˜åº¦ï¼ˆè¦æŒ–çš„æ–°åŒºå—ï¼‰
	nextHeight := currentHeight + 1

	if s.logger != nil {
		if len(parentHash) >= 8 {
			s.logger.Debugf("å¼€å§‹æ„å»ºå€™é€‰åŒºå—ï¼Œå½“å‰é“¾é«˜åº¦: %d, æ–°åŒºå—é«˜åº¦: %d, çˆ¶å“ˆå¸Œ: %x, äº¤æ˜“æ•°: %d",
				currentHeight, nextHeight, parentHash[:8], len(candidateTxs))
		} else {
			s.logger.Debugf("å¼€å§‹æ„å»ºå€™é€‰åŒºå—ï¼Œå½“å‰é“¾é«˜åº¦: %d, æ–°åŒºå—é«˜åº¦: %d, çˆ¶å“ˆå¸Œ: %x, äº¤æ˜“æ•°: %d",
				currentHeight, nextHeight, parentHash, len(candidateTxs))
		}
	}

	// 1. æ„å»ºCoinbaseäº¤æ˜“ï¼ˆP3-3ï¼šå®Œæ•´å®ç°åŒ…å«æ‰‹ç»­è´¹èšåˆï¼‰
	// ä½¿ç”¨ nextHeightï¼Œå› ä¸º Coinbase äº¤æ˜“å±äºæ–°åŒºå—
	coinbaseTx, err := s.buildCoinbaseTransaction(ctx, nextHeight, candidateTxs)
	if err != nil {
		return nil, fmt.Errorf("æ„å»ºCoinbaseäº¤æ˜“å¤±è´¥: %w", err)
	}
	if coinbaseTx == nil {
		return nil, fmt.Errorf("æ„å»ºCoinbaseäº¤æ˜“å¤±è´¥ï¼šè¿”å›nil")
	}

	// 2. ç»„è£…å®Œæ•´äº¤æ˜“åˆ—è¡¨ï¼ˆCoinbaseåœ¨é¦–ä½ï¼‰
	allTxs := append([]*transaction.Transaction{coinbaseTx}, candidateTxs...)

	// 3. æ„å»ºåŒºå—å¤´ï¼ˆä½¿ç”¨ nextHeightï¼‰
	header, err := s.buildBlockHeader(ctx, nextHeight, parentHash, allTxs)
	if err != nil {
		return nil, fmt.Errorf("æ„å»ºåŒºå—å¤´å¤±è´¥: %w", err)
	}

	// 4. ç»„è£…åŒºå—ä½“
	body := &core.BlockBody{
		Transactions: allTxs,
	}

	// 5. ç»„è£…å®Œæ•´åŒºå—
	block := &core.Block{
		Header: header,
		Body:   body,
	}

	// 6. è®¡ç®—åŒºå—å“ˆå¸Œï¼ˆç”¨äºæ—¥å¿—å’ŒéªŒè¯ï¼‰
	blockHash, err := s.calculateBlockHash(ctx, header)
	if err != nil {
		return nil, fmt.Errorf("è®¡ç®—åŒºå—å“ˆå¸Œå¤±è´¥: %w", err)
	}

	// æ³¨æ„ï¼šåŒºå—å“ˆå¸Œä¸å­˜å‚¨åœ¨Headerä¸­ï¼Œè€Œæ˜¯é€šè¿‡è®¡ç®—å¾—å‡º

	if s.logger != nil {
		if len(blockHash) >= 8 {
			s.logger.Debugf("âœ… å€™é€‰åŒºå—æ„å»ºå®Œæˆï¼Œå“ˆå¸Œ: %x, é«˜åº¦: %d, äº¤æ˜“æ•°: %d",
				blockHash[:8], header.Height, len(allTxs))
		} else {
			s.logger.Debugf("âœ… å€™é€‰åŒºå—æ„å»ºå®Œæˆï¼Œå“ˆå¸Œ: %x, é«˜åº¦: %d, äº¤æ˜“æ•°: %d",
				blockHash, header.Height, len(allTxs))
		}
	}

	return block, nil
}

// ==================== åŒºå—å¥–åŠ±é…ç½®ï¼ˆå¯å¼€å…³ï¼‰ ====================

// calculateBlockReward è®¡ç®—å›ºå®šåŒºå—å¥–åŠ±
//
// ğŸ¯ **æµ‹è¯•ç”¨å›ºå®šå¥–åŠ±**ï¼š
// - ç”¨äºæµ‹è¯•è½¬è´¦åŠŸèƒ½ï¼Œæä¾›åˆå§‹èµ„é‡‘æ¥æº
// - ç”Ÿäº§ç¯å¢ƒå¯ä»¥é€šè¿‡æ³¨é‡Šæ­¤æ–¹æ³•æ¥ç¦ç”¨åŒºå—å¥–åŠ±ï¼ˆæ¢å¤é›¶å¢å‘ï¼‰
//
// ğŸ’° **å¥–åŠ±è§„åˆ™**ï¼š
// - å›ºå®šå¥–åŠ±ï¼š5 WES = 5,000,000,000 Weiï¼ˆå‚è€ƒå‰¯æœ¬4ï¼‰
// - æ¯ä¸ªåŒºå—éƒ½æœ‰å›ºå®šå¥–åŠ±ï¼Œä¸éšé«˜åº¦å˜åŒ–
//
// ğŸ”§ **å¦‚ä½•ç¦ç”¨åŒºå—å¥–åŠ±**ï¼š
// æ–¹æ³•1ï¼šå°†æ­¤æ–¹æ³•çš„è¿”å›å€¼æ”¹ä¸º 0
//
//	return 0
//
// æ–¹æ³•2ï¼šåœ¨ buildCoinbaseTransaction ä¸­æ³¨é‡Šæ‰è°ƒç”¨æ­¤æ–¹æ³•çš„ä»£ç 
//
// å‚æ•°ï¼š
//   - currentHeight: å½“å‰åŒºå—é«˜åº¦ï¼ˆé¢„ç•™ï¼Œæœªæ¥å¯å®ç°å‡åŠé€»è¾‘ï¼‰
//
// è¿”å›ï¼š
//   - uint64: åŒºå—å¥–åŠ±é‡‘é¢ï¼ˆWeiå•ä½ï¼‰
func (s *Service) calculateBlockReward(currentHeight uint64) uint64 {
	// ğŸ”§ æµ‹è¯•ç”¨å›ºå®šå¥–åŠ±ï¼š5 WES
	// ğŸ’¡ å¦‚éœ€ç¦ç”¨åŒºå—å¥–åŠ±ï¼Œå°†ä¸‹é¢è¿™è¡Œæ”¹ä¸º: return 0
	return 5_000_000_000 // 5 WES = 5 * 10^9 Wei

	// ğŸ“ æœªæ¥å¯æ‰©å±•ä¸ºåŠ¨æ€å¥–åŠ±ï¼ˆå‡åŠé€»è¾‘ï¼‰ï¼š
	// if currentHeight < 210000 {
	//     return 50_000_000_000 // 50 WES
	// } else if currentHeight < 420000 {
	//     return 25_000_000_000 // 25 WES
	// } else {
	//     return 12_500_000_000 // 12.5 WES
	// }
}

// ==================== Coinbase äº¤æ˜“æ„å»º ====================

// buildCoinbaseTransaction æ„å»ºCoinbaseäº¤æ˜“ï¼ˆæ”¯æŒå¯é€‰çš„åŒºå—å¥–åŠ±ï¼‰
//
// ğŸ¯ **æ¿€åŠ±æœºåˆ¶**ï¼š
// - æ‰‹ç»­è´¹å¥–åŠ±ï¼šèšåˆæ‰€æœ‰äº¤æ˜“çš„æ‰‹ç»­è´¹
// - åŒºå—å¥–åŠ±ï¼šé€šè¿‡ calculateBlockReward() æ–¹æ³•è®¡ç®—ï¼ˆå¯å¼€å…³ï¼‰
// - çŸ¿å·¥æ€»æ”¶å…¥ = åŒºå—å¥–åŠ± + äº¤æ˜“æ‰‹ç»­è´¹
//
// ğŸ“‹ **å®Œæ•´å®ç°æµç¨‹**ï¼š
// 1. è®¡ç®—åŒºå—å¥–åŠ±ï¼ˆé€šè¿‡ç‹¬ç«‹æ–¹æ³•ï¼Œæ–¹ä¾¿å¼€å…³ï¼‰
// 2. å¦‚æœæœ‰å€™é€‰äº¤æ˜“ï¼Œè®¡ç®—å¹¶èšåˆæ‰€æœ‰äº¤æ˜“çš„æ‰‹ç»­è´¹
// 3. åˆå¹¶åŒºå—å¥–åŠ±å’Œæ‰‹ç»­è´¹ï¼Œæ„å»º Coinbase äº¤æ˜“
// 4. å¦‚æœæ²¡æœ‰ä»»ä½•å¥–åŠ±ï¼Œåˆ›å»ºç©ºçš„ Coinbaseï¼ˆå‘åå…¼å®¹ï¼‰
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡
//   - currentHeight: å½“å‰åŒºå—é«˜åº¦
//   - candidateTxs: å€™é€‰äº¤æ˜“åˆ—è¡¨ï¼ˆç”¨äºè®¡ç®—æ‰‹ç»­è´¹ï¼‰
//
// è¿”å›ï¼š
//   - *transaction.Transaction: Coinbaseäº¤æ˜“
//   - error: æ„å»ºé”™è¯¯
func (s *Service) buildCoinbaseTransaction(
	ctx context.Context,
	currentHeight uint64,
	candidateTxs []*transaction.Transaction,
) (*transaction.Transaction, error) {
	// ğŸ”§ æ­¥éª¤1ï¼šè®¡ç®—åŒºå—å¥–åŠ±ï¼ˆå¯é€šè¿‡ calculateBlockReward æ–¹æ³•å¼€å…³ï¼‰
	blockReward := s.calculateBlockReward(currentHeight)

	if s.logger != nil {
		s.logger.Infof("ğŸ”§ [DEBUG] buildCoinbaseTransaction è°ƒç”¨: é«˜åº¦=%d, åŒºå—å¥–åŠ±=%d, å€™é€‰äº¤æ˜“æ•°=%d",
			currentHeight, blockReward, len(candidateTxs))
	}

	// æ­¥éª¤2ï¼šèšåˆäº¤æ˜“æ‰‹ç»­è´¹
	var aggregatedFees *tx.AggregatedFees
	if s.feeManager != nil && len(candidateTxs) > 0 {
		// 2.1 è®¡ç®—æ¯ç¬”äº¤æ˜“çš„æ‰‹ç»­è´¹
		fees := make([]*tx.AggregatedFees, 0, len(candidateTxs))
		for _, tx := range candidateTxs {
			fee, err := s.feeManager.CalculateTransactionFee(ctx, tx)
			if err != nil {
				if s.logger != nil {
					s.logger.Warnf("è®¡ç®—äº¤æ˜“æ‰‹ç»­è´¹å¤±è´¥: %vï¼Œè·³è¿‡è¯¥äº¤æ˜“", err)
				}
				continue
			}
			if fee != nil && len(fee.ByToken) > 0 {
				fees = append(fees, fee)
			}
		}

		// 2.2 èšåˆæ‰€æœ‰æ‰‹ç»­è´¹
		if len(fees) > 0 {
			aggregatedFees = s.feeManager.AggregateFees(fees)
		}
	}

	// æ­¥éª¤3ï¼šè·å–çŸ¿å·¥åœ°å€
	s.minerMu.RLock()
	minerAddr := s.minerAddress
	s.minerMu.RUnlock()

	if s.logger != nil {
		s.logger.Infof("ğŸ”§ [DEBUG] çŸ¿å·¥åœ°å€é•¿åº¦=%d, åŒºå—å¥–åŠ±=%d", len(minerAddr), blockReward)
	}

	// æ­¥éª¤4ï¼šæ„å»º Coinbase äº¤æ˜“
	// å¦‚æœæœ‰åŒºå—å¥–åŠ±æˆ–æ‰‹ç»­è´¹ï¼Œä¸”çŸ¿å·¥åœ°å€å¯ç”¨ï¼Œæ„å»ºåŒ…å«å¥–åŠ±çš„ Coinbase
	hasReward := blockReward > 0
	hasFees := aggregatedFees != nil && len(aggregatedFees.ByToken) > 0
	hasValidMiner := len(minerAddr) == 20

	if s.logger != nil {
		s.logger.Infof("ğŸ”§ [DEBUG] Coinbaseæ¡ä»¶æ£€æŸ¥: æœ‰å¥–åŠ±=%v, æœ‰æ‰‹ç»­è´¹=%v, çŸ¿å·¥åœ°å€æœ‰æ•ˆ=%v",
			hasReward, hasFees, hasValidMiner)
	}

	if (hasReward || hasFees) && hasValidMiner {
		if s.logger != nil {
			s.logger.Infof("âœ… [DEBUG] è°ƒç”¨ buildCoinbaseWithReward æ„å»ºå¥–åŠ±Coinbase")
		}
		return s.buildCoinbaseWithReward(ctx, blockReward, aggregatedFees, minerAddr)
	}

	// æ­¥éª¤5ï¼šè§£æå½“å‰é“¾IDï¼ˆç”¨äºè®¾ç½® Coinbase äº¤æ˜“çš„ ChainIdï¼‰
	chainID, err := s.resolveChainID(ctx)
	if err != nil {
		return nil, fmt.Errorf("è§£æé“¾IDå¤±è´¥: %w", err)
	}
	chainIDBytes := make([]byte, 8)
	binary.BigEndian.PutUint64(chainIDBytes, chainID)

	// åå¤‡æ–¹æ¡ˆï¼šåˆ›å»ºç©º Coinbaseï¼ˆå‘åå…¼å®¹ï¼‰
	if s.logger != nil {
		s.logger.Warnf("âš ï¸ [DEBUG] åˆ›å»ºç©º Coinbase - åŸå› : æœ‰å¥–åŠ±=%v, æœ‰æ‰‹ç»­è´¹=%v, çŸ¿å·¥åœ°å€æœ‰æ•ˆ=%v",
			hasReward, hasFees, hasValidMiner)
	}

	return &transaction.Transaction{
		Version:           1,
		Inputs:            []*transaction.TxInput{},
		Outputs:           []*transaction.TxOutput{},
		Nonce:             0,
		CreationTimestamp: uint64(time.Now().Unix()),
		ChainId:           chainIDBytes,
		FeeMechanism:      nil,
		Metadata:          nil,
	}, nil
}

// buildCoinbaseWithReward æ„å»ºåŒ…å«åŒºå—å¥–åŠ±çš„Coinbaseäº¤æ˜“
//
// ğŸ¯ **æ ¸å¿ƒé€»è¾‘**ï¼š
// - åˆå¹¶åŒºå—å¥–åŠ±å’Œæ‰‹ç»­è´¹åˆ°åŸç”Ÿå¸è¾“å‡º
// - ä¸ºå…¶ä»–ä»£å¸åˆ›å»ºç‹¬ç«‹çš„æ‰‹ç»­è´¹è¾“å‡º
//
// ğŸ’° **åŸç”Ÿå¸æ€»é¢è®¡ç®—**ï¼š
// - åŸç”Ÿå¸è¾“å‡ºé‡‘é¢ = åŒºå—å¥–åŠ± + åŸç”Ÿå¸æ‰‹ç»­è´¹
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡
//   - blockReward: å›ºå®šåŒºå—å¥–åŠ±ï¼ˆWeiå•ä½ï¼‰
//   - aggregatedFees: èšåˆçš„æ‰‹ç»­è´¹ï¼ˆå¯èƒ½ä¸ºnilï¼‰
//   - minerAddr: çŸ¿å·¥åœ°å€
//
// è¿”å›ï¼š
//   - *transaction.Transaction: Coinbaseäº¤æ˜“
//   - error: æ„å»ºé”™è¯¯
func (s *Service) buildCoinbaseWithReward(
	ctx context.Context,
	blockReward uint64,
	aggregatedFees *tx.AggregatedFees,
	minerAddr []byte,
) (*transaction.Transaction, error) {
	if s.logger != nil {
		feeCount := 0
		if aggregatedFees != nil {
			feeCount = len(aggregatedFees.ByToken)
		}
		s.logger.Infof("ğŸ¯ [DEBUG] buildCoinbaseWithReward è°ƒç”¨: åŒºå—å¥–åŠ±=%d, æ‰‹ç»­è´¹ç§ç±»=%d, çŸ¿å·¥åœ°å€=%x",
			blockReward, feeCount, minerAddr[:8])
	}

	// è§£æå½“å‰é“¾IDï¼ˆç”¨äºè®¾ç½® Coinbase äº¤æ˜“çš„ ChainIdï¼‰
	chainID, err := s.resolveChainID(ctx)
	if err != nil {
		return nil, fmt.Errorf("è§£æé“¾IDå¤±è´¥: %w", err)
	}
	chainIDBytes := make([]byte, 8)
	binary.BigEndian.PutUint64(chainIDBytes, chainID)

	// åˆ›å»º Coinbase äº¤æ˜“åŸºç¡€ç»“æ„
	coinbase := &transaction.Transaction{
		Version:           1,
		Inputs:            []*transaction.TxInput{}, // Coinbase æ— è¾“å…¥
		Outputs:           []*transaction.TxOutput{},
		Nonce:             0,
		CreationTimestamp: uint64(time.Now().Unix()),
		ChainId:           chainIDBytes,
		FeeMechanism:      nil,
		Metadata:          nil,
	}

	// 1. è®¡ç®—åŸç”Ÿå¸æ€»é¢ï¼ˆåŒºå—å¥–åŠ± + åŸç”Ÿå¸æ‰‹ç»­è´¹ï¼‰
	nativeTotalAmount := big.NewInt(int64(blockReward))

	if aggregatedFees != nil && len(aggregatedFees.ByToken) > 0 {
		// æ£€æŸ¥æ˜¯å¦æœ‰åŸç”Ÿå¸æ‰‹ç»­è´¹
		nativeTokenKey := tx.TokenKey("native")
		if nativeFee, ok := aggregatedFees.ByToken[nativeTokenKey]; ok && nativeFee != nil {
			// åŸç”Ÿå¸æ€»é¢ = åŒºå—å¥–åŠ± + æ‰‹ç»­è´¹
			nativeTotalAmount = new(big.Int).Add(nativeTotalAmount, nativeFee)
		}
	}

	// 2. åˆ›å»ºåŸç”Ÿå¸è¾“å‡ºï¼ˆåŒºå—å¥–åŠ± + æ‰‹ç»­è´¹ï¼‰
	if nativeTotalAmount.Sign() > 0 {
		nativeOutput := &transaction.TxOutput{
			Owner: minerAddr,
			OutputContent: &transaction.TxOutput_Asset{
				Asset: &transaction.AssetOutput{
					AssetContent: &transaction.AssetOutput_NativeCoin{
						NativeCoin: &transaction.NativeCoinAsset{
							Amount: nativeTotalAmount.String(), // big.Int è½¬ä¸ºå­—ç¬¦ä¸²
						},
					},
				},
			},
			LockingConditions: []*transaction.LockingCondition{
				{
					Condition: &transaction.LockingCondition_SingleKeyLock{
						SingleKeyLock: &transaction.SingleKeyLock{
							KeyRequirement: &transaction.SingleKeyLock_RequiredAddressHash{
								RequiredAddressHash: minerAddr,
							},
							RequiredAlgorithm: transaction.SignatureAlgorithm_SIGNATURE_ALGORITHM_ECDSA_SECP256K1,
							SighashType:       transaction.SignatureHashType_SIGHASH_ALL,
						},
					},
				},
			},
		}
		coinbase.Outputs = append(coinbase.Outputs, nativeOutput)

		if s.logger != nil {
			s.logger.Infof("ğŸ’° CoinbaseåŸç”Ÿå¸è¾“å‡º: åŒºå—å¥–åŠ±(%d Wei) + æ‰‹ç»­è´¹ = %s Wei",
				blockReward, nativeTotalAmount.String())
		}
	}

	// 3. ä¸ºå…¶ä»–ä»£å¸åˆ›å»ºæ‰‹ç»­è´¹è¾“å‡ºï¼ˆå¦‚æœæœ‰ï¼‰
	if aggregatedFees != nil && len(aggregatedFees.ByToken) > 0 {
		for tokenKey, amount := range aggregatedFees.ByToken {
			// è·³è¿‡åŸç”Ÿå¸ï¼ˆå·²ç»å¤„ç†è¿‡äº†ï¼‰
			if tokenKey == "native" {
				continue
			}

			if amount != nil && amount.Sign() > 0 {
				// åˆ›å»ºåˆçº¦ä»£å¸è¾“å‡º
				// TODO: éœ€è¦è§£æ tokenKey æ¥æå– contractAddress å’Œ tokenClassId
				// å½“å‰ç®€åŒ–å®ç°ï¼Œè·³è¿‡éåŸç”Ÿå¸ï¼ˆæœªæ¥æ‰©å±•ï¼‰
				if s.logger != nil {
					s.logger.Warnf("æš‚ä¸æ”¯æŒéåŸç”Ÿå¸æ‰‹ç»­è´¹è¾“å‡º: %s, é‡‘é¢: %s", tokenKey, amount.String())
				}
			}
		}
	}

	if s.logger != nil {
		totalFeeTokens := 0
		if aggregatedFees != nil {
			totalFeeTokens = len(aggregatedFees.ByToken)
		}
		s.logger.Debugf("âœ… æˆåŠŸæ„å»ºåŒ…å«åŒºå—å¥–åŠ±çš„Coinbaseäº¤æ˜“ï¼Œè¾“å‡ºæ•°: %d, æ‰‹ç»­è´¹ä»£å¸ç§ç±»: %d",
			len(coinbase.Outputs), totalFeeTokens)
	}

	return coinbase, nil
}

// SetMinerAddress è®¾ç½®çŸ¿å·¥åœ°å€ï¼ˆå»¶è¿Ÿæ³¨å…¥ï¼ŒP3-3ï¼‰
//
// ğŸ¯ **è®¾è®¡ç›®çš„**ï¼š
// - çŸ¿å·¥åœ°å€ç”±å…±è¯†å±‚æˆ–æŒ–çŸ¿æ§åˆ¶å™¨ç®¡ç†
// - é€šè¿‡å»¶è¿Ÿæ³¨å…¥é¿å…å¾ªç¯ä¾èµ–
// - æ”¯æŒè¿è¡Œæ—¶åŠ¨æ€è®¾ç½®
//
// å‚æ•°ï¼š
//   - minerAddr: çŸ¿å·¥åœ°å€ï¼ˆå¿…é¡»ä¸º20å­—èŠ‚ï¼‰
//
// è¯´æ˜ï¼š
//   - åœ°å€é•¿åº¦é”™è¯¯æ—¶ä¼šè®°å½•é”™è¯¯æ—¥å¿—ä½†ä¸ä¸­æ–­æµç¨‹
func (s *Service) SetMinerAddress(minerAddr []byte) {
	if len(minerAddr) != 20 {
		if s.logger != nil {
			s.logger.Errorf("âš ï¸ çŸ¿å·¥åœ°å€é•¿åº¦é”™è¯¯: æœŸæœ›20å­—èŠ‚ï¼Œå®é™…%då­—èŠ‚", len(minerAddr))
		}
		return
	}

	s.minerMu.Lock()
	defer s.minerMu.Unlock()

	// åˆ›å»ºå‰¯æœ¬ä»¥é¿å…å¤–éƒ¨ä¿®æ”¹
	s.minerAddress = make([]byte, 20)
	copy(s.minerAddress, minerAddr)

	if s.logger != nil {
		s.logger.Infof("âœ… çŸ¿å·¥åœ°å€å·²è®¾ç½®åˆ° BlockBuilder: %x", minerAddr[:8])
	}
}

// buildBlockHeader æ„å»ºåŒºå—å¤´
//
// ğŸ¯ **åŒºå—å¤´æ„é€ **
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡
//   - currentHeight: å½“å‰åŒºå—é«˜åº¦
//   - parentHash: çˆ¶åŒºå—å“ˆå¸Œ
//   - transactions: äº¤æ˜“åˆ—è¡¨
//
// è¿”å›ï¼š
//   - *core.BlockHeader: åŒºå—å¤´
//   - error: æ„å»ºé”™è¯¯
func (s *Service) buildBlockHeader(
	ctx context.Context,
	currentHeight uint64,
	parentHash []byte,
	transactions []*transaction.Transaction,
) (*core.BlockHeader, error) {
	// 1. è®¡ç®—äº¤æ˜“Merkleæ ¹
	merkleRoot, err := s.calculateMerkleRoot(ctx, transactions)
	if err != nil {
		return nil, fmt.Errorf("è®¡ç®—Merkleæ ¹å¤±è´¥: %w", err)
	}

	// 2. è·å–çŠ¶æ€æ ¹ï¼ˆP3-4ï¼šä»UTXOæœåŠ¡è·å–å½“å‰çŠ¶æ€æ ¹ï¼‰
	var stateRoot []byte
	if s.utxoQuery != nil {
		var err error
		stateRoot, err = s.utxoQuery.GetCurrentStateRoot(ctx)
		if err != nil {
			return nil, fmt.Errorf("è·å–UTXOçŠ¶æ€æ ¹å¤±è´¥ï¼ˆæ‹’ç»å‡ºå—ï¼‰: %w", err)
		}
	} else {
		return nil, fmt.Errorf("UTXOQueryæœªæ³¨å…¥ï¼Œæ— æ³•è·å–çŠ¶æ€æ ¹ï¼ˆæ‹’ç»å‡ºå—ï¼‰")
	}
	if len(stateRoot) != 32 {
		return nil, fmt.Errorf("çŠ¶æ€æ ¹é•¿åº¦æ— æ•ˆï¼ˆæ‹’ç»å‡ºå—ï¼‰ï¼šgot=%d want=32", len(stateRoot))
	}

	// 3. è·å–éš¾åº¦ï¼ˆP3-5ï¼šä»å½“å‰åŒºå—è·å–éš¾åº¦ï¼‰
	// v2ï¼šä¼˜å…ˆé€šè¿‡ DifficultyPolicy è®¡ç®—ä¸‹ä¸€é«˜åº¦éš¾åº¦ï¼›ä½†åœ¨å•æµ‹/å·¥å…·/é“¾æœªåˆå§‹åŒ–ç­‰åœºæ™¯å…è®¸é™çº§ï¼Œ
	// é¿å…å› ä¸ºâ€œçˆ¶åŒºå—/åˆ›ä¸–ä¸å­˜åœ¨â€é˜»æ–­å€™é€‰åŒºå—æ„å»ºã€‚
	if s.configProvider == nil {
		return nil, fmt.Errorf("configProvider æœªæ³¨å…¥ï¼Œæ— æ³•è®¡ç®—éš¾åº¦")
	}

	consensusOpts := s.configProvider.GetConsensus()
	if consensusOpts == nil {
		return nil, fmt.Errorf("æ— æ³•è·å–å…±è¯†é…ç½®ï¼ˆGetConsensus è¿”å› nilï¼‰")
	}
	chainOpts := s.configProvider.GetBlockchain()
	if chainOpts == nil {
		return nil, fmt.Errorf("æ— æ³•è·å–åŒºå—é“¾é…ç½®ï¼ˆGetBlockchain è¿”å› nilï¼‰")
	}

	// è®¡ç®—ç›®æ ‡å‡ºå—æ—¶é—´ï¼ˆç§’ï¼Œè‡³å°‘ 1sï¼‰
	targetSec := uint64(consensusOpts.TargetBlockTime.Seconds())
	if targetSec == 0 {
		targetSec = 1
	}

	params := difficulty.Params{
		TargetBlockTimeSeconds:             targetSec,
		DifficultyWindow:                   consensusOpts.POW.DifficultyWindow,
		MaxAdjustUpPPM:                     consensusOpts.POW.MaxAdjustUpPPM,
		MaxAdjustDownPPM:                   consensusOpts.POW.MaxAdjustDownPPM,
		EMAAlphaPPM:                        consensusOpts.POW.EMAAlphaPPM,
		MinDifficulty:                      consensusOpts.POW.MinDifficulty,
		MaxDifficulty:                      consensusOpts.POW.MaxDifficulty,
		MTPWindow:                          consensusOpts.POW.MTPWindow,
		MinBlockIntervalSeconds:            uint64(chainOpts.Block.MinBlockInterval),
		MaxFutureDriftSeconds:              consensusOpts.POW.MaxFutureDriftSeconds,
		EmergencyDownshiftThresholdSeconds: consensusOpts.POW.EmergencyDownshiftThresholdSeconds,
		MaxEmergencyDownshiftBits:          consensusOpts.POW.MaxEmergencyDownshiftBits,
	}

	// é¢„å…ˆç¡®å®šåŒºå—æ—¶é—´æˆ³ï¼ˆdifficulty è®¡ç®—éœ€è¦ä¸ header.Timestamp ä¿æŒä¸€è‡´ï¼‰
	headerTimestamp := uint64(time.Now().Unix())

	// åˆ›ä¸–éš¾åº¦ï¼šé«˜åº¦0
	var difficultyValue uint64
	if currentHeight == 0 {
		difficultyValue = consensusOpts.POW.InitialDifficulty
	} else {
		parentHeight := currentHeight - 1
		// å¦‚æœç¼ºå°‘ blockQueryï¼ˆæˆ–çˆ¶åŒºå—ä¸å­˜åœ¨ï¼‰ï¼Œé™çº§ä½¿ç”¨æœ€å°éš¾åº¦ï¼Œä¿è¯æ„å»ºæµç¨‹å¯ç»§ç»­ã€‚
		if s.blockQuery == nil {
			difficultyValue = params.MinDifficulty
			if difficultyValue == 0 {
				difficultyValue = 1
			}
			if s.logger != nil {
				s.logger.Warnf("blockQuery æœªæ³¨å…¥ï¼Œæ— æ³•è®¡ç®—ä¸‹ä¸€éš¾åº¦ï¼Œé™çº§ä½¿ç”¨ difficulty=%d (height=%d)", difficultyValue, currentHeight)
			}
		} else {
			parentBlock, err := s.blockQuery.GetBlockByHeight(ctx, parentHeight)
			if err != nil || parentBlock == nil || parentBlock.Header == nil {
				// å¸¸è§äºï¼šé“¾å°šæœªå†™å…¥åˆ›ä¸–åŒºå—ï¼ˆheight=1 çš„çˆ¶é«˜åº¦=0ï¼‰ï¼Œæˆ–è€…æµ‹è¯•æœªå‡†å¤‡çˆ¶åŒºå—
				if parentHeight == 0 {
					difficultyValue = consensusOpts.POW.InitialDifficulty
					if difficultyValue == 0 {
						difficultyValue = params.MinDifficulty
					}
					if difficultyValue == 0 {
						difficultyValue = 1
					}
				} else {
					difficultyValue = params.MinDifficulty
					if difficultyValue == 0 {
						difficultyValue = 1
					}
				}
				if s.logger != nil {
					s.logger.Warnf("è·å–çˆ¶åŒºå—å¤±è´¥ï¼Œæ— æ³•è®¡ç®—ä¸‹ä¸€éš¾åº¦ï¼Œé™çº§ä½¿ç”¨ difficulty=%d (parentHeight=%d): %v", difficultyValue, parentHeight, err)
				}
			} else {
				// å…ˆç¡®å®šæ–°åŒºå—æ—¶é—´æˆ³ï¼Œå†å°†å…¶çº³å…¥éš¾åº¦è®¡ç®—ï¼ˆç”¨äºâ€œé•¿æ—¶é—´æ— å—åçš„éš¾åº¦å›è½/æ¢å¤â€ï¼‰ã€‚
				// æ³¨æ„ï¼šæœ€ç»ˆæ—¶é—´æˆ³ä»éœ€é€šè¿‡éªŒè¯ä¾§çš„ MTP/min-interval/future-drift è§„åˆ™ã€‚
				nowTS := uint64(time.Now().Unix())
				minTS := parentBlock.Header.Timestamp + params.MinBlockIntervalSeconds
				if nowTS < minTS {
					nowTS = minTS
				}
				headerTimestamp = nowTS

				difficultyValue, err = difficulty.NextDifficultyForTimestamp(ctx, s.blockQuery, parentBlock.Header, headerTimestamp, params)
				if err != nil {
					// è®¡ç®—å¤±è´¥æ—¶ï¼Œå›é€€åˆ°çˆ¶åŒºå—éš¾åº¦/æœ€å°éš¾åº¦
					difficultyValue = parentBlock.Header.Difficulty
					if difficultyValue == 0 {
						difficultyValue = params.MinDifficulty
					}
					if difficultyValue == 0 {
						difficultyValue = 1
					}
					if s.logger != nil {
						s.logger.Warnf("è®¡ç®—ä¸‹ä¸€éš¾åº¦å¤±è´¥ï¼Œé™çº§ä½¿ç”¨ difficulty=%d: %v", difficultyValue, err)
					}
				}
			}
		}
	}

	// 4. æ„å»ºåŒºå—å¤´
	// æ³¨æ„ï¼šcurrentHeight å‚æ•°å·²ç»æ˜¯ä¸‹ä¸€ä¸ªåŒºå—çš„é«˜åº¦ï¼ˆåœ¨ buildCandidate ä¸­è®¡ç®—ï¼‰
	chainID, err := s.resolveChainID(ctx)
	if err != nil {
		return nil, fmt.Errorf("è§£æé“¾IDå¤±è´¥: %w", err)
	}

	header := &core.BlockHeader{
		ChainId:      chainID,
		Version:      1,
		PreviousHash: parentHash,
		MerkleRoot:   merkleRoot,
		Timestamp:    headerTimestamp,
		Height:       currentHeight,
		Nonce:        make([]byte, 8), // åˆå§‹nonceï¼ˆæŒ–çŸ¿æ—¶ä¿®æ”¹ï¼‰
		Difficulty:   difficultyValue,
		StateRoot:    stateRoot,
	}

	return header, nil
}

// calculateMerkleRoot è®¡ç®—Merkleæ ¹
//
// ğŸ¯ **Merkleæ ‘è®¡ç®—**
//
// ä½¿ç”¨ merkle.CalculateMerkleRoot è¿›è¡Œæ ‡å‡†Merkleæ ‘è®¡ç®—
//
// å‚æ•°ï¼š
//   - transactions: äº¤æ˜“åˆ—è¡¨
//
// è¿”å›ï¼š
//   - []byte: Merkleæ ¹ï¼ˆ32å­—èŠ‚ï¼‰
//   - error: è®¡ç®—é”™è¯¯
func (s *Service) calculateMerkleRoot(ctx context.Context, transactions []*transaction.Transaction) ([]byte, error) {
	if len(transactions) == 0 {
		// ç©ºäº¤æ˜“åˆ—è¡¨è¿”å›å…¨é›¶Merkleæ ¹
		return make([]byte, 32), nil
	}

	if s.logger != nil {
		s.logger.Infof("ğŸ”§ [BlockBuilder] ä½¿ç”¨ç»Ÿä¸€äº¤æ˜“å“ˆå¸ŒæœåŠ¡è®¡ç®—Merkleæ ¹ï¼Œäº¤æ˜“æ•°: %d", len(transactions))
	}

	// ğŸ”§ ä½¿ç”¨ç»Ÿä¸€çš„äº¤æ˜“å“ˆå¸ŒæœåŠ¡è®¡ç®—äº¤æ˜“å“ˆå¸Œ
	// ç¡®ä¿ä¸å…±è¯†å±‚ï¼ˆPoW Handlerï¼‰çš„è®¡ç®—æ–¹å¼å®Œå…¨ä¸€è‡´
	transactionHashes := make([][]byte, len(transactions))
	for i, tx := range transactions {
		req := &transaction.ComputeHashRequest{
			Transaction:      tx,
			IncludeDebugInfo: false,
		}

		resp, err := s.txHashClient.ComputeHash(ctx, req)
		if err != nil {
			return nil, fmt.Errorf("è®¡ç®—äº¤æ˜“[%d]å“ˆå¸Œå¤±è´¥: %w", i, err)
		}

		if resp == nil || !resp.IsValid || len(resp.Hash) == 0 {
			return nil, fmt.Errorf("äº¤æ˜“[%d]å“ˆå¸Œæ— æ•ˆ", i)
		}

		transactionHashes[i] = resp.Hash

		if s.logger != nil && i == 0 {
			s.logger.Infof("ğŸ”§ [BlockBuilder] ç¬¬ä¸€ç¬”äº¤æ˜“å“ˆå¸Œ: %x", resp.Hash[:16])
		}
	}

	// ä½¿ç”¨ crypto æ¥å£æ„å»ºMerkleæ ‘
	merkleRoot, err := s.buildMerkleTreeFromHashes(transactionHashes)
	if err != nil {
		return nil, fmt.Errorf("æ„å»ºMerkleæ ‘å¤±è´¥: %w", err)
	}

	if s.logger != nil {
		s.logger.Infof("âœ… [BlockBuilder] è®¡ç®—Merkleæ ¹å®Œæˆï¼Œäº¤æ˜“æ•°: %d, Merkleæ ¹: %x", len(transactions), merkleRoot[:16])
	}

	return merkleRoot, nil
}

// buildMerkleTreeFromHashes ä»äº¤æ˜“å“ˆå¸Œåˆ—è¡¨æ„å»ºMerkleæ ‘
// ğŸ”§ ä¸ MerkleTreeManager ä¿æŒä¸€è‡´ï¼šå¯¹å¥‡æ•°èŠ‚ç‚¹ï¼ˆåŒ…æ‹¬å•ä¸ªèŠ‚ç‚¹ï¼‰è¿›è¡Œå¤åˆ¶
func (s *Service) buildMerkleTreeFromHashes(hashes [][]byte) ([]byte, error) {
	// ğŸ”§ ä¿®å¤ï¼šå³ä½¿åªæœ‰1ä¸ªèŠ‚ç‚¹ä¹Ÿè¦å¤åˆ¶ï¼Œä¸ MerkleTreeManager ä¿æŒä¸€è‡´
	// MerkleTreeManager åœ¨æ„å»ºæ—¶ä¼šå¯¹å¥‡æ•°èŠ‚ç‚¹å¤åˆ¶ï¼Œç¡®ä¿æ ‘çš„å®Œæ•´æ€§

	// å¦‚æœèŠ‚ç‚¹æ•°ä¸ºå¥‡æ•°ï¼Œå¤åˆ¶æœ€åä¸€ä¸ªèŠ‚ç‚¹
	if len(hashes)%2 == 1 {
		hashes = append(hashes, hashes[len(hashes)-1])
	}

	// åŸºç¡€æƒ…å†µï¼š2ä¸ªèŠ‚ç‚¹é…å¯¹åè¿”å›
	if len(hashes) == 2 {
		combined := append(hashes[0], hashes[1]...)
		parentHash, err := s.hasher.Hash(combined)
		if err != nil {
			return nil, fmt.Errorf("è®¡ç®—çˆ¶èŠ‚ç‚¹å“ˆå¸Œå¤±è´¥: %w", err)
		}
		return parentHash, nil
	}

	// è®¡ç®—ä¸‹ä¸€å±‚èŠ‚ç‚¹
	nextLevel := make([][]byte, 0, len(hashes)/2)
	for i := 0; i < len(hashes); i += 2 {
		// è¿æ¥ä¸¤ä¸ªå­èŠ‚ç‚¹çš„å“ˆå¸Œ
		combined := append(hashes[i], hashes[i+1]...)

		// è®¡ç®—çˆ¶èŠ‚ç‚¹å“ˆå¸Œ
		parentHash, err := s.hasher.Hash(combined)
		if err != nil {
			return nil, fmt.Errorf("è®¡ç®—çˆ¶èŠ‚ç‚¹å“ˆå¸Œå¤±è´¥: %w", err)
		}

		nextLevel = append(nextLevel, parentHash)
	}

	// é€’å½’å¤„ç†ä¸‹ä¸€å±‚
	return s.buildMerkleTreeFromHashes(nextLevel)
}

// calculateBlockHash è®¡ç®—åŒºå—å“ˆå¸Œ
//
// ğŸ¯ **åŒºå—å“ˆå¸Œè®¡ç®—**
//
// ä½¿ç”¨ gRPC BlockHashService è¿›è¡Œæ ‡å‡†åŒºå—å“ˆå¸Œè®¡ç®—
//
// å‚æ•°ï¼š
//   - header: åŒºå—å¤´
//
// è¿”å›ï¼š
//   - []byte: åŒºå—å“ˆå¸Œï¼ˆ32å­—èŠ‚ï¼‰
//   - error: è®¡ç®—é”™è¯¯
func (s *Service) calculateBlockHash(ctx context.Context, header *core.BlockHeader) ([]byte, error) {
	if s.blockHashClient == nil {
		return nil, fmt.Errorf("blockHashClient æœªåˆå§‹åŒ–")
	}

	// æ„å»ºåŒºå—ï¼ˆåªæœ‰Headerï¼ŒBodyå¯ä»¥ä¸ºç©ºï¼‰
	block := &core.Block{
		Header: header,
	}

	// ä½¿ç”¨ gRPC æœåŠ¡è®¡ç®—åŒºå—å“ˆå¸Œ
	req := &core.ComputeBlockHashRequest{
		Block: block,
	}
	resp, err := s.blockHashClient.ComputeBlockHash(ctx, req)
	if err != nil {
		return nil, fmt.Errorf("è°ƒç”¨åŒºå—å“ˆå¸ŒæœåŠ¡å¤±è´¥: %w", err)
	}

	if !resp.IsValid {
		return nil, fmt.Errorf("åŒºå—ç»“æ„æ— æ•ˆ")
	}

	hash := resp.Hash
	if s.logger != nil {
		s.logger.Debugf("âœ… è®¡ç®—åŒºå—å“ˆå¸ŒæˆåŠŸï¼Œé«˜åº¦: %d, å“ˆå¸Œ: %x", header.Height, hash[:8])
	}

	return hash, nil
}
