// Package startup å®ç°åŒºå—é“¾å¯åŠ¨æµç¨‹
//
// ğŸ¯ **å¯åŠ¨æµç¨‹åŒ… (Startup Flow Package)**
//
// æœ¬åŒ…å®ç°äº†åŒºå—é“¾å¯åŠ¨æ—¶çš„åˆå§‹åŒ–é€»è¾‘ï¼ŒåŒ…æ‹¬ï¼š
// - åˆ›ä¸–åŒºå—æ£€æŸ¥å’Œåˆå§‹åŒ–
// - å¯åŠ¨æ—¶åŒæ­¥è§¦å‘
//
// ğŸ—ï¸ **è®¾è®¡åŸåˆ™**
// - å¯åŠ¨é€»è¾‘ï¼šå±äºå¯åŠ¨æµç¨‹ï¼Œä¸æ˜¯é•¿æœŸæœåŠ¡
// - å‡½æ•°å¼è®¾è®¡ï¼šä½¿ç”¨å‡½æ•°è€Œä¸æ˜¯æœåŠ¡ï¼Œé¿å…åˆ›å»ºä¸å¿…è¦çš„æœåŠ¡å®ä¾‹
// - èŒè´£æ¸…æ™°ï¼šå¯åŠ¨é€»è¾‘é›†ä¸­åœ¨ä¸€ä¸ªåœ°æ–¹
package startup

import (
	"context"
	"encoding/binary"
	"fmt"
	"time"

	"github.com/weisyn/v1/internal/core/persistence/repair"
	"github.com/weisyn/v1/internal/core/tx/builder"
	core "github.com/weisyn/v1/pb/blockchain/block"
	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
	blockif "github.com/weisyn/v1/pkg/interfaces/block"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/crypto"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/log"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/storage"
	"github.com/weisyn/v1/pkg/interfaces/persistence"
	"github.com/weisyn/v1/pkg/types"
)

// InitializeGenesisIfNeeded å¯åŠ¨æ—¶æ£€æŸ¥å¹¶åˆå§‹åŒ–åˆ›ä¸–åŒºå—
//
// ğŸ¯ **å¯åŠ¨æµç¨‹å‡½æ•°**ï¼šè´Ÿè´£åœ¨å¯åŠ¨æ—¶æ£€æŸ¥å¹¶åˆ›å»ºåˆ›ä¸–åŒºå—
//
// è¿™æ˜¯ä¸€ä¸ªå¯åŠ¨å‡½æ•°ï¼Œä¸æ˜¯æœåŠ¡æ–¹æ³•ã€‚
// åœ¨ chain/module.go çš„ fx.Invoke ä¸­ç›´æ¥è°ƒç”¨ã€‚
//
// æ³¨æ„ï¼šæ­¤å‡½æ•°ä¸æ”¯æŒåˆ›ä¸–åŒºå—ç´¢å¼•å®Œæ•´æ€§æ£€æŸ¥ï¼Œå»ºè®®ä½¿ç”¨ InitializeGenesisIfNeededWithStore
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡å¯¹è±¡
//   - queryService: æŸ¥è¯¢æœåŠ¡ï¼ˆæ£€æŸ¥é“¾çŠ¶æ€ï¼‰
//   - blockProcessor: åŒºå—å¤„ç†å™¨ï¼ˆå¤„ç†åˆ›ä¸–åŒºå—ï¼Œç»Ÿä¸€å…¥å£ï¼‰
//   - genesisBuilder: åˆ›ä¸–åŒºå—æ„å»ºå™¨ï¼ˆBlockæ¨¡å—æä¾›ï¼Œå…¬å…±æ¥å£ï¼‰
//   - addressManager: åœ°å€ç®¡ç†å™¨ï¼ˆæ„å»ºåˆ›ä¸–äº¤æ˜“ï¼‰
//   - genesisConfig: åˆ›ä¸–é…ç½®
//   - logger: æ—¥å¿—æœåŠ¡
//
// è¿”å›ï¼š
//   - bool: trueè¡¨ç¤ºåˆ›å»ºäº†åˆ›ä¸–åŒºå—ï¼Œfalseè¡¨ç¤ºè·³è¿‡
//   - error: å¤„ç†è¿‡ç¨‹ä¸­çš„é”™è¯¯
func InitializeGenesisIfNeeded(
	ctx context.Context,
	queryService persistence.QueryService,
	blockProcessor blockif.BlockProcessor,
	genesisBuilder blockif.GenesisBlockBuilder,
	addressManager crypto.AddressManager,
	powEngine crypto.POWEngine,
	genesisConfig *types.GenesisConfig,
	logger log.Logger,
) (bool, error) {
	if logger != nil {
		logger.Debug("æ£€æŸ¥æ˜¯å¦éœ€è¦åˆå§‹åŒ–åˆ›ä¸–åŒºå—")
	}

	// 1. æ£€æŸ¥æ˜¯å¦éœ€è¦åˆ›ä¸–åŒºå—ï¼ˆä¸ä¼ storeï¼Œè·³è¿‡ç´¢å¼•å®Œæ•´æ€§æ£€æŸ¥ï¼‰
	needed, err := needsGenesisBlock(ctx, queryService, nil, logger)
	if err != nil {
		return false, fmt.Errorf("æ£€æŸ¥åˆ›ä¸–éœ€æ±‚å¤±è´¥: %w", err)
	}

	if !needed {
		if logger != nil {
			logger.Infof("é“¾å·²åˆå§‹åŒ–ï¼Œè·³è¿‡åˆ›ä¸–åŒºå—åˆ›å»º")
		}
		return false, nil
	}

	// 2. åè°ƒæ„å»ºåˆ›ä¸–åŒºå—ï¼ˆåŒ…æ‹¬PoWæŒ–çŸ¿ï¼‰
	genesisBlock, err := buildGenesisBlock(
		ctx,
		genesisConfig,
		genesisBuilder,
		addressManager,
		powEngine,
		logger,
	)
	if err != nil {
		return false, fmt.Errorf("æ„å»ºåˆ›ä¸–åŒºå—å¤±è´¥: %w", err)
	}

	// 3. å¤„ç†åˆ›ä¸–åŒºå—
	if err := processGenesisBlock(ctx, genesisBlock, blockProcessor, queryService, logger); err != nil {
		return false, fmt.Errorf("å¤„ç†åˆ›ä¸–åŒºå—å¤±è´¥: %w", err)
	}

	if logger != nil {
		logger.Infof("ğŸ‰ åˆ›ä¸–åŒºå—åˆå§‹åŒ–å®Œæˆ")
	}

	return true, nil
}

// InitializeGenesisIfNeededWithStore å¸¦å­˜å‚¨çš„åˆ›ä¸–åŒºå—åˆå§‹åŒ–ï¼ˆç”¨äºæŒä¹…åŒ– genesis_hashï¼‰
//
// ğŸ¯ **æ¨èä½¿ç”¨**ï¼šæ”¯æŒåˆ›ä¸–åŒºå—ç´¢å¼•å®Œæ•´æ€§æ£€æŸ¥å’Œè‡ªåŠ¨ä¿®å¤
//
// è¿™æ˜¯ InitializeGenesisIfNeeded çš„æ‰©å±•ç‰ˆæœ¬ï¼Œé¢å¤–åŠŸèƒ½åŒ…æ‹¬ï¼š
// 1. åˆ›ä¸–åŒºå—ç´¢å¼•å®Œæ•´æ€§æ£€æŸ¥
// 2. åˆ›ä¸–åŒºå—åˆ›å»ºæˆåŠŸåæŒä¹…åŒ– genesis_hash
// 3. ğŸ†• æ”¯æŒä»blocksæ–‡ä»¶è‡ªåŠ¨ä¿®å¤ç´¢å¼•
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡
//   - queryService: æŸ¥è¯¢æœåŠ¡
//   - blockProcessor: åŒºå—å¤„ç†å™¨
//   - genesisBuilder: åˆ›ä¸–åŒºå—æ„å»ºå™¨
//   - addressManager: åœ°å€ç®¡ç†å™¨
//   - powEngine: PoW å¼•æ“
//   - genesisConfig: åˆ›ä¸–é…ç½®
//   - store: BadgerStoreï¼ˆç”¨äºç´¢å¼•å®Œæ•´æ€§æ£€æŸ¥å’ŒæŒä¹…åŒ– genesis_hashï¼‰
//   - fileStore: æ–‡ä»¶å­˜å‚¨ï¼ˆç”¨äºä»blocksæ–‡ä»¶ä¿®å¤ç´¢å¼•ï¼‰
//   - blockHashClient: åŒºå—å“ˆå¸Œè®¡ç®—æœåŠ¡ï¼ˆç”¨äºä¿®å¤ç´¢å¼•ï¼‰
//   - logger: æ—¥å¿—è®°å½•å™¨
//
// è¿”å›ï¼š
//   - bool: æ˜¯å¦åˆ›å»ºäº†åˆ›ä¸–åŒºå—
//   - error: å¤„ç†è¿‡ç¨‹ä¸­çš„é”™è¯¯
func InitializeGenesisIfNeededWithStore(
	ctx context.Context,
	queryService persistence.QueryService,
	blockProcessor blockif.BlockProcessor,
	genesisBuilder blockif.GenesisBlockBuilder,
	addressManager crypto.AddressManager,
	powEngine crypto.POWEngine,
	genesisConfig *types.GenesisConfig,
	store storage.BadgerStore,
	fileStore storage.FileStore,
	blockHashClient core.BlockHashServiceClient,
	logger log.Logger,
) (bool, error) {
	if logger != nil {
		logger.Debug("æ£€æŸ¥æ˜¯å¦éœ€è¦åˆå§‹åŒ–åˆ›ä¸–åŒºå—ï¼ˆå¸¦ç´¢å¼•å®Œæ•´æ€§æ£€æŸ¥å’Œè‡ªåŠ¨ä¿®å¤ï¼‰")
	}

	// 1. æ£€æŸ¥æ˜¯å¦éœ€è¦åˆ›ä¸–åŒºå—æˆ–ä¿®å¤ç´¢å¼•ï¼ˆä¼ store+fileStoreï¼Œæ”¯æŒç´¢å¼•å®Œæ•´æ€§æ£€æŸ¥å’Œæ–‡ä»¶å­˜åœ¨æ€§æ£€æŸ¥ï¼‰
	checkResult, err := needsGenesisBlockV2(ctx, queryService, store, fileStore, logger)
	if err != nil {
		return false, fmt.Errorf("æ£€æŸ¥åˆ›ä¸–éœ€æ±‚å¤±è´¥: %w", err)
	}

	// 2. å¦‚æœéœ€è¦ä¿®å¤ç´¢å¼•ï¼Œè°ƒç”¨ä¿®å¤å™¨
	if checkResult.NeedsRepair {
		if logger != nil {
			logger.Info("ğŸ©¹ å¼€å§‹ä¿®å¤åˆ›ä¸–åŒºå—ç´¢å¼•...")
		}

		// å¯¼å…¥repairåŒ…å¹¶è°ƒç”¨ä¿®å¤å‡½æ•°
		if err := repair.RepairGenesisIndex(ctx, store, fileStore, blockHashClient, logger); err != nil {
			return false, fmt.Errorf("ä¿®å¤åˆ›ä¸–åŒºå—ç´¢å¼•å¤±è´¥: %w", err)
		}

		if logger != nil {
			logger.Info("âœ… åˆ›ä¸–åŒºå—ç´¢å¼•ä¿®å¤å®Œæˆ")
		}

		// ä¿®å¤å®Œæˆï¼Œä¸éœ€è¦åˆ›å»ºåŒºå—
		return false, nil
	}

	// 3. å¦‚æœä¸éœ€è¦åˆ›å»ºåŒºå—ï¼Œç›´æ¥è¿”å›
	if !checkResult.NeedsCreate {
		if logger != nil {
			logger.Infof("é“¾å·²åˆå§‹åŒ–ï¼Œè·³è¿‡åˆ›ä¸–åŒºå—åˆ›å»º")
		}
		return false, nil
	}

	// 3.5 é¦–æ¬¡å¯åŠ¨ä¿æŠ¤ï¼šæ¸…ç†å¯èƒ½è¢«â€œæŸ¥è¯¢ä¾§ä¿®å¤ç­–ç•¥â€æå‰å†™å…¥çš„é“¾å°–ï¼Œé¿å… DataWriter åˆ¤å®šä¸ºé‡å¤åˆ›ä¸–
	// è¯´æ˜ï¼šQueryService.GetCurrentHeight å…·å¤‡â€œé“¾å°–ä¿®å¤å…œåº•ï¼ˆç­–ç•¥3-åˆ›ä¸–ï¼‰â€ï¼Œå¯èƒ½åœ¨åˆ›ä¸–æµç¨‹ä¹‹å‰å†™å…¥ state:chain:tipã€‚
	// ä½†â€œåˆ›ä¸–åˆ›å»ºâ€å¿…é¡»ç”±å¯åŠ¨æœºåˆ¶ä¸»å¯¼ï¼Œä¸èƒ½è¢«é”™è¯¯è¡¥å¿æœºåˆ¶æŠ¢å…ˆå†™å…¥é“¾å°–ã€‚
	if store != nil {
		firstTime, err := isFirstTimeStartup(ctx, store, logger)
		if err != nil {
			return false, fmt.Errorf("æ£€æŸ¥é¦–æ¬¡å¯åŠ¨çŠ¶æ€å¤±è´¥: %w", err)
		}
		if firstTime {
			tipKey := []byte("state:chain:tip")
			if err := store.Delete(ctx, tipKey); err != nil {
				return false, fmt.Errorf("é¦–æ¬¡å¯åŠ¨æ¸…ç†é“¾å°–å¤±è´¥: %w", err)
			}
			if logger != nil {
				logger.Infof("ğŸ§¹ é¦–æ¬¡å¯åŠ¨å·²æ¸…ç†é“¾å°–çŠ¶æ€ï¼Œç¡®ä¿å¯ä»¥å†™å…¥åˆ›ä¸–åŒºå—: key=%s", string(tipKey))
			}
		}
	}

	// 4. éœ€è¦åˆ›å»ºåˆ›ä¸–åŒºå—ï¼šåè°ƒæ„å»ºåˆ›ä¸–åŒºå—ï¼ˆåŒ…æ‹¬PoWæŒ–çŸ¿ï¼‰
	genesisBlock, err := buildGenesisBlock(
		ctx,
		genesisConfig,
		genesisBuilder,
		addressManager,
		powEngine,
		logger,
	)
	if err != nil {
		return false, fmt.Errorf("æ„å»ºåˆ›ä¸–åŒºå—å¤±è´¥: %w", err)
	}

	// 5. å¤„ç†åˆ›ä¸–åŒºå—
	if err := processGenesisBlock(ctx, genesisBlock, blockProcessor, queryService, logger); err != nil {
		return false, fmt.Errorf("å¤„ç†åˆ›ä¸–åŒºå—å¤±è´¥: %w", err)
	}

	// 6. æŒä¹…åŒ– genesis_hash
	if store != nil {
		if err := PersistGenesisHash(ctx, store, genesisConfig); err != nil {
			if logger != nil {
				logger.Errorf("æŒä¹…åŒ– genesis hash å¤±è´¥: %v", err)
			}
			return false, fmt.Errorf("æŒä¹…åŒ– genesis hash å¤±è´¥: %w", err)
		}
		if logger != nil {
			logger.Info("âœ… Genesis hash å·²æŒä¹…åŒ–åˆ° metadata")
		}
	}

	if logger != nil {
		logger.Infof("ğŸ‰ åˆ›ä¸–åŒºå—åˆå§‹åŒ–å®Œæˆ")
	}

	return true, nil
}

// GenesisCheckResult åˆ›ä¸–åŒºå—æ£€æŸ¥ç»“æœ
type GenesisCheckResult struct {
	NeedsCreate bool // éœ€è¦åˆ›å»ºåˆ›ä¸–åŒºå—
	NeedsRepair bool // éœ€è¦ä¿®å¤ç´¢å¼•
}

// isFirstTimeStartup åˆ¤æ–­æ˜¯å¦ä¸ºé¦–æ¬¡å¯åŠ¨ï¼ˆæ ¹æ® genesis_hash å…ƒæ•°æ®ï¼‰
//
// è¿™æ˜¯åˆ¤æ–­â€œé“¾æ˜¯å¦å·²åˆ›å»ºâ€çš„å”¯ä¸€æƒå¨æ–¹æ³•ï¼š
// - genesis_hash ä¸å­˜åœ¨/ä¸ºç©ºï¼šé¦–æ¬¡å¯åŠ¨ï¼Œåº”åˆ›å»ºåˆ›ä¸–åŒºå—
// - genesis_hash å­˜åœ¨ï¼šé“¾å·²å­˜åœ¨ï¼ˆå³ä½¿ç´¢å¼•æŸåï¼Œä¹Ÿåº”èµ°ä¿®å¤æµç¨‹ï¼Œè€Œä¸æ˜¯é‡æ–°åˆ›ä¸–ï¼‰
func isFirstTimeStartup(ctx context.Context, store storage.BadgerStore, logger log.Logger) (bool, error) {
	if store == nil {
		return false, fmt.Errorf("store ä¸èƒ½ä¸ºç©º")
	}

	key := []byte(ChainIdentityMetadataKey)
	v, err := store.Get(ctx, key)
	if err != nil {
		return false, fmt.Errorf("è¯»å– genesis_hash å…ƒæ•°æ®å¤±è´¥: %w", err)
	}

	// BadgerStore.Getï¼šé”®ä¸å­˜åœ¨æ—¶è¿”å› (nil, nil)
	if len(v) == 0 {
		if logger != nil {
			logger.Info("ğŸ†• æœªæ£€æµ‹åˆ° genesis_hash å…ƒæ•°æ®ï¼Œåˆ¤å®šä¸ºé¦–æ¬¡å¯åŠ¨")
		}
		return true, nil
	}

	if logger != nil {
		genesisHash := string(v)
		logger.Infof("âœ… æ£€æµ‹åˆ° genesis_hash å…ƒæ•°æ®ï¼Œé“¾å·²å­˜åœ¨: %s (å‰8ä½: %s)",
			genesisHash, genesisHash[:min(8, len(genesisHash))])
	}
	return false, nil
}

// needsGenesisBlockV2 æ£€æŸ¥æ˜¯å¦éœ€è¦åˆ›å»ºæˆ–ä¿®å¤åˆ›ä¸–åŒºå—ï¼ˆæ–°ç‰ˆæœ¬ï¼‰
//
// åˆ¤æ–­å½“å‰é“¾çŠ¶æ€ï¼š
// 1. æ£€æŸ¥é“¾æ˜¯å¦å·²åˆå§‹åŒ–ï¼ˆé€šè¿‡æŸ¥è¯¢æœ€é«˜åŒºå—ï¼‰
// 2. æ£€æŸ¥æ˜¯å¦å­˜åœ¨é«˜åº¦ä¸º0çš„åŒºå—
// 3. æ£€æŸ¥é“¾çŠ¶æ€çš„ä¸€è‡´æ€§
// 4. ğŸ†• æ£€æŸ¥åˆ›ä¸–åŒºå—ç´¢å¼•å®Œæ•´æ€§
// 5. ğŸ†• æ£€æŸ¥åˆ›ä¸–åŒºå—æ–‡ä»¶æ˜¯å¦å­˜åœ¨ï¼ˆåŒºåˆ†é¦–æ¬¡å¯åŠ¨ä¸ç´¢å¼•æŸåï¼‰
//
// è¿”å›ï¼š
//   - GenesisCheckResult: æ£€æŸ¥ç»“æœ
//   - error: æ£€æŸ¥è¿‡ç¨‹ä¸­çš„é”™è¯¯
func needsGenesisBlockV2(ctx context.Context, queryService persistence.QueryService, store storage.BadgerStore, fileStore storage.FileStore, logger log.Logger) (GenesisCheckResult, error) {
	result := GenesisCheckResult{}

	if logger != nil {
		logger.Debug("æ£€æŸ¥æ˜¯å¦éœ€è¦åˆ›å»ºæˆ–ä¿®å¤åˆ›ä¸–åŒºå—")
	}

	// å…¼å®¹è·¯å¾„ï¼šå½“ store æœªæ³¨å…¥æ—¶ï¼Œæ— æ³•ä½¿ç”¨ genesis_hash å…ƒæ•°æ®ä½œä¸ºæƒå¨åˆ¤æ–­ï¼›
	// æ­¤æ—¶ä¿æŒæœ€å°è¡Œä¸ºï¼šä»…æ ¹æ® QueryService åˆ¤æ–­æ˜¯å¦éœ€è¦åˆ›å»ºåˆ›ä¸–åŒºå—ï¼Œä¸åšä¿®å¤ï¼ˆNeedsRepair æ’ä¸º falseï¼‰ã€‚
	if store == nil {
		height, err := queryService.GetCurrentHeight(ctx)
		if err != nil {
			result.NeedsCreate = true
			return result, nil
		}
		if height == 0 {
			hash, herr := queryService.GetBestBlockHash(ctx)
			if herr != nil || len(hash) == 0 {
				result.NeedsCreate = true
				return result, nil
			}
		}
		return result, nil
	}

	// ============================================================
	// é˜¶æ®µ1ï¼šé¦–æ¬¡å¯åŠ¨åˆ¤æ–­ï¼ˆä¸»è¦æœºåˆ¶ï¼‰
	// ============================================================
	firstTime, err := isFirstTimeStartup(ctx, store, logger)
	if err != nil {
		return result, err
	}
	if firstTime {
		result.NeedsCreate = true
		return result, nil
	}

	// ============================================================
	// é˜¶æ®µ2ï¼šé”™è¯¯è¡¥å¿æœºåˆ¶ï¼ˆä»…é“¾å·²å­˜åœ¨æ—¶æ‰æ£€æŸ¥/ä¿®å¤ç´¢å¼•ï¼‰
	// ============================================================
	// 1) è·å–æœ€ä½³åŒºå—å“ˆå¸Œï¼ˆé€šå¸¸å°±æ˜¯é“¾å°–å“ˆå¸Œï¼›é“¾å­˜åœ¨æ—¶åº”å¯è¯»ï¼‰
	hash, err := queryService.GetBestBlockHash(ctx)
	if err != nil || len(hash) == 0 {
		// é“¾å·²å­˜åœ¨ï¼ˆgenesis_hash å­˜åœ¨ï¼‰ï¼Œä½†é“¾å°–å“ˆå¸Œä¸å¯è¯»ï¼šè§†ä¸ºä¸¥é‡æŸå â†’ å°è¯•èµ°ä¿®å¤ï¼ˆå¦‚æœ blocks æ–‡ä»¶å­˜åœ¨ï¼‰
		if logger != nil {
			logger.Warnf("âš ï¸ é“¾å·²å­˜åœ¨ä½†æ— æ³•è·å–æœ€ä½³åŒºå—å“ˆå¸Œï¼Œå¯èƒ½éœ€è¦ä¿®å¤ç´¢å¼•: err=%v len=%d", err, len(hash))
		}

		if fileStore != nil && store != nil {
			blockFilePath := "blocks/0000000000/0000000000.bin"
			if _, loadErr := fileStore.Load(ctx, blockFilePath); loadErr != nil {
				return result, fmt.Errorf("æ•°æ®æŸåï¼šé“¾å·²å­˜åœ¨ä½†åˆ›ä¸–åŒºå—æ–‡ä»¶ç¼ºå¤±: %w", loadErr)
			}
			result.NeedsRepair = true
			return result, nil
		}

		return result, fmt.Errorf("é“¾å·²å­˜åœ¨ä½†æ— æ³•è·å–æœ€ä½³åŒºå—å“ˆå¸Œï¼Œä¸”æ— æ³•æ‰§è¡Œä¿®å¤ï¼ˆstore/fileStore æœªæ³¨å…¥ï¼‰: %w", err)
	}

	// 2) æ£€æŸ¥åˆ›ä¸–åŒºå—ç´¢å¼•å®Œæ•´æ€§ï¼ˆç¼ºå¤±/æŸååˆ™ä¿®å¤ï¼‰
	if store != nil {
		needsRepair := checkGenesisIndexIntegrity(ctx, store, hash, logger)
		if needsRepair {
			if fileStore != nil {
				blockFilePath := "blocks/0000000000/0000000000.bin"
				if _, loadErr := fileStore.Load(ctx, blockFilePath); loadErr != nil {
					return result, fmt.Errorf("æ•°æ®æŸåï¼šç´¢å¼•æŸåä¸”åˆ›ä¸–åŒºå—æ–‡ä»¶ç¼ºå¤±: %w", loadErr)
				}
			}

			if logger != nil {
				logger.Warn("ğŸ©¹ æ£€æµ‹åˆ°åˆ›ä¸–åŒºå—ç´¢å¼•æŸåï¼ˆé“¾å·²å­˜åœ¨ï¼Œè¿›å…¥ä¿®å¤æµç¨‹ï¼‰")
			}
			result.NeedsRepair = true
			return result, nil
		}
	}

	// 3) é“¾å·²å­˜åœ¨ä¸”ç´¢å¼•å®Œæ•´ â†’ ä¸éœ€è¦ä»»ä½•æ“ä½œ
	return result, nil
}

// needsGenesisBlock æ£€æŸ¥æ˜¯å¦éœ€è¦åˆ›å»ºåˆ›ä¸–åŒºå—ï¼ˆå…¼å®¹ç‰ˆæœ¬ï¼‰
//
// âš ï¸ **å·²åºŸå¼ƒ**: å»ºè®®ä½¿ç”¨ needsGenesisBlockV2 ä»¥æ”¯æŒç´¢å¼•ä¿®å¤
//
// åˆ¤æ–­å½“å‰é“¾çŠ¶æ€æ˜¯å¦éœ€è¦åˆ›å»ºåˆ›ä¸–åŒºå—ï¼š
// 1. æ£€æŸ¥é“¾æ˜¯å¦å·²åˆå§‹åŒ–ï¼ˆé€šè¿‡æŸ¥è¯¢æœ€é«˜åŒºå—ï¼‰
// 2. æ£€æŸ¥æ˜¯å¦å­˜åœ¨é«˜åº¦ä¸º0çš„åŒºå—
// 3. æ£€æŸ¥é“¾çŠ¶æ€çš„ä¸€è‡´æ€§
func needsGenesisBlock(ctx context.Context, queryService persistence.QueryService, store storage.BadgerStore, logger log.Logger) (bool, error) {
	// å…¼å®¹ç‰ˆæœ¬ï¼šä¼ å…¥ nil fileStoreï¼ˆæ— æ³•æ£€æŸ¥æ–‡ä»¶å­˜åœ¨æ€§ï¼‰
	result, err := needsGenesisBlockV2(ctx, queryService, store, nil, logger)
	if err != nil {
		return false, err
	}
	// æ—§ç‰ˆæœ¬APIï¼šåªè¦éœ€è¦åˆ›å»ºæˆ–ä¿®å¤ï¼Œéƒ½è¿”å›true
	return result.NeedsCreate, nil
}

// checkGenesisIndexIntegrity æ£€æŸ¥åˆ›ä¸–åŒºå—ç´¢å¼•å®Œæ•´æ€§
//
// ğŸ¯ **å¯åŠ¨é—¨é—¸å¢å¼º**ï¼šåœ¨å¯åŠ¨æ—¶ä¸»åŠ¨æ£€æµ‹åˆ›ä¸–åŒºå—ç´¢å¼•å®Œæ•´æ€§
//
// æ£€æŸ¥é¡¹ï¼š
// 1. indices:height:0 å­˜åœ¨ä¸”æ ¼å¼æ­£ç¡®ï¼ˆè‡³å°‘32å­—èŠ‚hashï¼‰
// 2. indices:hash:<genesis_hash> å­˜åœ¨ä¸”æŒ‡å‘é«˜åº¦0
//
// è¿”å›ï¼š
//   - true: éœ€è¦ä¿®å¤
//   - false: ç´¢å¼•å®Œæ•´
func checkGenesisIndexIntegrity(ctx context.Context, store storage.BadgerStore, genesisHash []byte, logger log.Logger) bool {
	if store == nil || len(genesisHash) == 0 {
		return false // æ— æ³•æ£€æŸ¥ï¼Œå‡è®¾å®Œæ•´
	}

	// æ£€æŸ¥ indices:height:0
	heightKey := []byte("indices:height:0")
	heightData, err := store.Get(ctx, heightKey)
	if err != nil {
		if logger != nil {
			logger.Warnf("ğŸ” åˆ›ä¸–åŒºå—é«˜åº¦ç´¢å¼•ç¼ºå¤±: key=%s err=%v", string(heightKey), err)
		}
		return true // éœ€è¦ä¿®å¤
	}
	if len(heightData) < 32 {
		if logger != nil {
			logger.Warnf("ğŸ” åˆ›ä¸–åŒºå—é«˜åº¦ç´¢å¼•æŸå: key=%s len=%d (expected>=32)", string(heightKey), len(heightData))
		}
		return true // éœ€è¦ä¿®å¤
	}

	// æ£€æŸ¥ indices:hash:<genesis_hash>
	hashKey := []byte(fmt.Sprintf("indices:hash:%x", genesisHash))
	hashData, err := store.Get(ctx, hashKey)
	if err != nil {
		if logger != nil {
			logger.Warnf("ğŸ” åˆ›ä¸–åŒºå—å“ˆå¸Œç´¢å¼•ç¼ºå¤±: key=%s err=%v", string(hashKey), err)
		}
		return true // éœ€è¦ä¿®å¤
	}
	if len(hashData) != 8 {
		if logger != nil {
			logger.Warnf("ğŸ” åˆ›ä¸–åŒºå—å“ˆå¸Œç´¢å¼•æŸå: key=%s len=%d (expected=8)", string(hashKey), len(hashData))
		}
		return true // éœ€è¦ä¿®å¤
	}

	// éªŒè¯å“ˆå¸Œç´¢å¼•æŒ‡å‘é«˜åº¦0
	indexedHeight := binary.BigEndian.Uint64(hashData)
	if indexedHeight != 0 {
		if logger != nil {
			logger.Warnf("ğŸ” åˆ›ä¸–åŒºå—å“ˆå¸Œç´¢å¼•é«˜åº¦ä¸åŒ¹é…: expected=0 actual=%d", indexedHeight)
		}
		return true // éœ€è¦ä¿®å¤
	}

	if logger != nil {
		logger.Debug("âœ… åˆ›ä¸–åŒºå—ç´¢å¼•å®Œæ•´æ€§æ£€æŸ¥é€šè¿‡")
	}
	return false // ç´¢å¼•å®Œæ•´
}

// buildGenesisBlock åè°ƒæ„å»ºåˆ›ä¸–åŒºå—
//
// ğŸ¯ **åè°ƒæ–¹æ³•**ï¼šè´Ÿè´£åè°ƒå®Œæ•´çš„åˆ›ä¸–åŒºå—æ„å»ºæµç¨‹
//
// è¿™æ˜¯ä¸€ä¸ªåè°ƒæ–¹æ³•ï¼Œè´Ÿè´£åè°ƒå®Œæ•´çš„åˆ›ä¸–åŒºå—æ„å»ºæµç¨‹ï¼š
// 1. éªŒè¯åˆ›ä¸–é…ç½®çš„æœ‰æ•ˆæ€§
// 2. åˆ›å»ºåˆ›ä¸–äº¤æ˜“ï¼ˆé€šè¿‡TXç»„ä»¶ï¼‰
// 3. è°ƒç”¨BLOCKçš„GenesisBlockBuilderæ„å»ºåˆ›ä¸–åŒºå—
// 4. å¯¹åˆ›ä¸–åŒºå—è¿›è¡ŒPoWæŒ–çŸ¿ï¼Œæ‰¾åˆ°æ»¡è¶³éš¾åº¦è¦æ±‚çš„Nonce
// 5. è°ƒç”¨BLOCKçš„GenesisBlockBuilderéªŒè¯åˆ›ä¸–åŒºå—
//
// âš ï¸ **æ³¨æ„**ï¼šå®é™…æ„å»ºç”±BLOCK.GenesisBlockBuilder.CreateGenesisBlock()å®Œæˆã€‚
// æœ¬æ–¹æ³•è´Ÿè´£åè°ƒæ„å»ºæµç¨‹ï¼Œå¹¶åœ¨æ„å»ºåè¿›è¡ŒPoWæŒ–çŸ¿ã€‚
func buildGenesisBlock(
	ctx context.Context,
	genesisConfig *types.GenesisConfig,
	genesisBuilder blockif.GenesisBlockBuilder,
	addressManager crypto.AddressManager,
	powEngine crypto.POWEngine,
	logger log.Logger,
) (*core.Block, error) {
	if logger != nil {
		logger.Infof("å¼€å§‹åˆ›å»ºåˆ›ä¸–åŒºå—...")
	}

	// 1. éªŒè¯åˆ›ä¸–é…ç½®
	if err := validateGenesisConfig(genesisConfig, logger); err != nil {
		return nil, fmt.Errorf("åˆ›ä¸–é…ç½®éªŒè¯å¤±è´¥: %w", err)
	}

	// 2. åˆ›å»ºåˆ›ä¸–äº¤æ˜“
	genesisTransactions, err := createGenesisTransactions(ctx, genesisConfig, addressManager, logger)
	if err != nil {
		return nil, fmt.Errorf("åˆ›å»ºåˆ›ä¸–äº¤æ˜“å¤±è´¥: %w", err)
	}

	if logger != nil {
		logger.Infof("åˆ›ä¸–äº¤æ˜“åˆ›å»ºå®Œæˆï¼Œæ•°é‡: %d", len(genesisTransactions))
	}

	// 3. æ„å»ºåˆ›ä¸–åŒºå—ï¼ˆé€šè¿‡æ„å»ºå™¨ï¼‰
	genesisBlock, err := genesisBuilder.CreateGenesisBlock(ctx, genesisTransactions, genesisConfig)
	if err != nil {
		return nil, fmt.Errorf("æ„å»ºåˆ›ä¸–åŒºå—å¤±è´¥: %w", err)
	}

	// 4. å¯¹åˆ›ä¸–åŒºå—è¿›è¡ŒPoWæŒ–çŸ¿ï¼Œæ‰¾åˆ°æ»¡è¶³éš¾åº¦è¦æ±‚çš„Nonce
	if powEngine != nil {
		if logger != nil {
			logger.Infof("â›ï¸  å¼€å§‹å¯¹åˆ›ä¸–åŒºå—è¿›è¡ŒPoWæŒ–çŸ¿ï¼ˆéš¾åº¦=%dï¼Œå¯èƒ½éœ€è¦å‡ ç§’åˆ°å‡ åˆ†é’Ÿï¼Œè¯·ç¨å€™ï¼‰...", genesisBlock.Header.Difficulty)
		}
		minedHeader, err := powEngine.MineBlockHeader(ctx, genesisBlock.Header)
		if err != nil {
			return nil, fmt.Errorf("åˆ›ä¸–åŒºå—PoWæŒ–çŸ¿å¤±è´¥: %w", err)
		}
		genesisBlock.Header = minedHeader
		if logger != nil {
			logger.Infof("âœ… åˆ›ä¸–åŒºå—PoWæŒ–çŸ¿å®Œæˆï¼ŒNonce=%x", minedHeader.Nonce)
		}
	} else {
		if logger != nil {
			logger.Warn("PoWå¼•æ“æœªæ³¨å…¥ï¼Œè·³è¿‡åˆ›ä¸–åŒºå—æŒ–çŸ¿ï¼ˆå°†æ— æ³•é€šè¿‡PoWéªŒè¯ï¼‰")
		}
	}

	// 5. éªŒè¯åˆ›ä¸–åŒºå—ï¼ˆåŒ…æ‹¬PoWéªŒè¯ï¼‰
	valid, err := genesisBuilder.ValidateGenesisBlock(ctx, genesisBlock)
	if err != nil {
		return nil, fmt.Errorf("éªŒè¯åˆ›ä¸–åŒºå—å¤±è´¥: %w", err)
	}
	if !valid {
		return nil, fmt.Errorf("åˆ›ä¸–åŒºå—éªŒè¯å¤±è´¥")
	}

	if logger != nil {
		logger.Infof("âœ… åˆ›ä¸–åŒºå—åˆ›å»ºæˆåŠŸï¼Œé«˜åº¦: %d, äº¤æ˜“æ•°: %d",
			genesisBlock.Header.Height, len(genesisTransactions))
	}

	return genesisBlock, nil
}

// processGenesisBlock å¤„ç†åˆ›ä¸–åŒºå—
//
// ğŸ¯ **åˆ›ä¸–åŒºå—å¤„ç†æ ¸å¿ƒ**
//
// å¤„ç†åˆ›ä¸–åŒºå—çš„å®Œæ•´æµç¨‹ï¼š
// 1. éªŒè¯åˆ›ä¸–åŒºå—çš„æœ‰æ•ˆæ€§
// 2. é€šè¿‡BlockProcessorå¤„ç†åˆ›ä¸–åŒºå—ï¼ˆç»Ÿä¸€å…¥å£ï¼‰
// 3. éªŒè¯åˆ›ä¸–åé“¾çŠ¶æ€
func processGenesisBlock(
	ctx context.Context,
	genesisBlock *core.Block,
	blockProcessor blockif.BlockProcessor,
	queryService persistence.QueryService,
	logger log.Logger,
) error {
	if logger != nil {
		logger.Infof("å¼€å§‹å¤„ç†åˆ›ä¸–åŒºå—...")
	}

	// 1. æœ€ç»ˆéªŒè¯åˆ›ä¸–åŒºå—
	if err := validateCreatedGenesisBlock(genesisBlock); err != nil {
		return fmt.Errorf("åˆ›ä¸–åŒºå—æœ€ç»ˆéªŒè¯å¤±è´¥: %w", err)
	}

	// 2. é€šè¿‡BlockProcessorå¤„ç†åˆ›ä¸–åŒºå—ï¼ˆç»Ÿä¸€å…¥å£ï¼Œç¡®ä¿ä¸å…¶ä»–åŒºå—ä¸€è‡´ï¼‰
	// BlockProcessorå†…éƒ¨ä¼šè°ƒç”¨DataWriter.WriteBlock()ï¼Œå¹¶ä¼šå‘å¸ƒBlockProcessedäº‹ä»¶ï¼Œ
	// DataWriterä¼šè‡ªåŠ¨æ›´æ–°é“¾å°–ï¼Œå› æ­¤è¿™é‡Œä¸éœ€è¦æ‰‹åŠ¨æ›´æ–°é“¾å°–ã€‚
	if err := blockProcessor.ProcessBlock(ctx, genesisBlock); err != nil {
		return fmt.Errorf("å¤„ç†åˆ›ä¸–åŒºå—å¤±è´¥: %w", err)
	}

	if logger != nil {
		logger.Info("âœ… åˆ›ä¸–åŒºå—å·²æäº¤å¤„ç†ï¼Œç­‰å¾…å¼‚æ­¥äº‹ä»¶å¤„ç†å®Œæˆ...")
	}

	// ğŸ”§ ç­‰å¾…å¼‚æ­¥äº‹ä»¶å¤„ç†å®Œæˆ
	// ç”±äº BlockProcessed äº‹ä»¶é‡‡ç”¨å¼‚æ­¥è®¢é˜…ï¼Œéœ€è¦ç»™äº‹ä»¶å¤„ç†å™¨ä¸€äº›æ—¶é—´æ¥æ›´æ–°çŠ¶æ€
	time.Sleep(200 * time.Millisecond)

	// 3. éªŒè¯åˆ›ä¸–åé“¾çŠ¶æ€
	if err := verifyGenesisState(ctx, queryService, logger); err != nil {
		return fmt.Errorf("åˆ›ä¸–åçŠ¶æ€éªŒè¯å¤±è´¥: %w", err)
	}

	if logger != nil {
		logger.Infof("âœ… åˆ›ä¸–åŒºå—å¤„ç†å®Œæˆ")
	}

	return nil
}

// ============================================================================
//                              è¾…åŠ©å‡½æ•°
// ============================================================================

// createGenesisTransactions åŸºäºåˆ›ä¸–é…ç½®é€šè¿‡TX Builderæ„å»ºåˆ›ä¸–äº¤æ˜“åˆ—è¡¨
//
// ğŸ¯ **æ¶æ„åŸåˆ™**ï¼š
// - CHAIN è°ƒç”¨ TX Builder æ¥åˆ›å»ºäº¤æ˜“ï¼Œè€Œä¸æ˜¯ç›´æ¥æ„é€  PROTO
// - éµå¾ªç»„ä»¶è¾¹ç•Œï¼Œå„ç»„ä»¶å„å¸å…¶èŒ
//
// è§„åˆ™ï¼š
// - æ„å»ºå•ä¸ª coinbase äº¤æ˜“ï¼ŒåŒ…å«æ‰€æœ‰åˆ›ä¸–è´¦æˆ·çš„èµ„äº§è¾“å‡º
// - æ¯ä¸ªè¾“å‡ºä¸º NativeCoinï¼Œé‡‘é¢å–è‡ª InitialBalance
// - é”å®šæ¡ä»¶ä½¿ç”¨ SingleKeyLockï¼ŒRequiredAddressHash ä¸ºè´¦æˆ·åœ°å€å“ˆå¸Œ
func createGenesisTransactions(
	ctx context.Context,
	genesisConfig *types.GenesisConfig,
	addressManager crypto.AddressManager,
	logger log.Logger,
) ([]*transaction.Transaction, error) {
	if genesisConfig == nil {
		return nil, fmt.Errorf("åˆ›ä¸–é…ç½®ä¸èƒ½ä¸ºç©º")
	}

	if len(genesisConfig.GenesisAccounts) == 0 {
		return nil, fmt.Errorf("åˆ›ä¸–è´¦æˆ·åˆ—è¡¨ä¸èƒ½ä¸ºç©º")
	}

	if addressManager == nil {
		return nil, fmt.Errorf("åœ°å€ç®¡ç†å™¨æœªåˆå§‹åŒ–ï¼Œæ— æ³•æ„å»ºåˆ›ä¸–è¾“å‡º")
	}

	// ä½¿ç”¨ TX Builder åˆ›å»ºäº¤æ˜“ï¼Œè€Œä¸æ˜¯ç›´æ¥æ„é€  PROTO
	// åˆ›å»º TxBuilder å®ä¾‹ï¼ˆåˆ›ä¸–äº¤æ˜“ä¸éœ€è¦ Draftï¼Œä¼ å…¥ nilï¼‰
	txBuilder := builder.NewService(nil)

	// é“¾IDç¼–ç ï¼ˆ8å­—èŠ‚å¤§ç«¯ï¼‰
	chainIDBytes := make([]byte, 8)
	chainId := genesisConfig.ChainID
	chainIDBytes[0] = byte(chainId >> 56)
	chainIDBytes[1] = byte(chainId >> 48)
	chainIDBytes[2] = byte(chainId >> 40)
	chainIDBytes[3] = byte(chainId >> 32)
	chainIDBytes[4] = byte(chainId >> 24)
	chainIDBytes[5] = byte(chainId >> 16)
	chainIDBytes[6] = byte(chainId >> 8)
	chainIDBytes[7] = byte(chainId)

	// è®¾ç½®é“¾ID
	txBuilder.SetChainID(chainIDBytes)

	// è®¾ç½®Nonceä¸º0ï¼ˆåˆ›ä¸–äº¤æ˜“ï¼‰
	txBuilder.SetNonce(0)
	// ä½¿ç”¨åˆ›ä¸–é…ç½®æ—¶é—´æˆ³ï¼Œç¡®ä¿å¤šèŠ‚ç‚¹åˆ›ä¸–äº¤æ˜“ä¸€è‡´
	txBuilder.SetCreationTimestamp(uint64(genesisConfig.Timestamp))

	// ä¸ºæ¯ä¸ªåˆ›ä¸–è´¦æˆ·æ·»åŠ èµ„äº§è¾“å‡º
	for i, acc := range genesisConfig.GenesisAccounts {
		if acc.Address == "" || acc.InitialBalance == "" {
			return nil, fmt.Errorf("ç¬¬%dä¸ªåˆ›ä¸–è´¦æˆ·é…ç½®ä¸å®Œæ•´", i)
		}

		addrBytes, err := addressManager.AddressToBytes(acc.Address)
		if err != nil || len(addrBytes) != 20 {
			return nil, fmt.Errorf("è§£æåˆ›ä¸–è´¦æˆ·åœ°å€å¤±è´¥[%d]: name=%q address=%q err=%v", i, acc.Name, acc.Address, err)
		}

		// æ„å»ºé”å®šæ¡ä»¶ï¼ˆSingleKeyLockï¼‰
		lock := &transaction.LockingCondition{
			Condition: &transaction.LockingCondition_SingleKeyLock{
				SingleKeyLock: &transaction.SingleKeyLock{
					KeyRequirement: &transaction.SingleKeyLock_RequiredAddressHash{
						RequiredAddressHash: addrBytes,
					},
				},
			},
		}

		// ä½¿ç”¨ TX Builder æ·»åŠ èµ„äº§è¾“å‡ºï¼ˆåŸç”Ÿå¸ï¼Œnil è¡¨ç¤ºåŸç”Ÿå¸ï¼‰
		txBuilder.AddAssetOutput(addrBytes, acc.InitialBalance, nil, lock)
	}

	// æ„å»ºäº¤æ˜“ï¼ˆè¿”å› ComposedTxï¼‰
	composedTx, err := txBuilder.Build()
	if err != nil {
		return nil, fmt.Errorf("æ„å»ºåˆ›ä¸–äº¤æ˜“å¤±è´¥: %w", err)
	}

	// ä» ComposedTx æå– Transactionï¼ˆComposedTx.Tx æ˜¯å…¬å¼€å­—æ®µï¼‰
	genesisTx := composedTx.Tx
	if genesisTx == nil {
		return nil, fmt.Errorf("æ„å»ºçš„äº¤æ˜“ä¸ºç©º")
	}

	return []*transaction.Transaction{genesisTx}, nil
}

// validateGenesisConfig éªŒè¯åˆ›ä¸–é…ç½®
func validateGenesisConfig(config *types.GenesisConfig, logger log.Logger) error {
	if config == nil {
		return fmt.Errorf("åˆ›ä¸–é…ç½®ä¸èƒ½ä¸ºç©º")
	}

	if config.ChainID == 0 {
		return fmt.Errorf("é“¾IDä¸èƒ½ä¸º0")
	}

	if config.NetworkID == "" {
		return fmt.Errorf("ç½‘ç»œIDä¸èƒ½ä¸ºç©º")
	}

	if config.Timestamp == 0 {
		return fmt.Errorf("æ—¶é—´æˆ³ä¸èƒ½ä¸º0")
	}

	// éªŒè¯åˆ›ä¸–è´¦æˆ·é…ç½®
	if len(config.GenesisAccounts) == 0 {
		if logger != nil {
			logger.Warnf("åˆ›ä¸–é…ç½®ä¸­æ²¡æœ‰é¢„è®¾è´¦æˆ·")
		}
	}

	for i, account := range config.GenesisAccounts {
		// ç›®å‰åˆ›ä¸–æµç¨‹åœ¨æ„å»ºäº¤æ˜“æ—¶åªä¾èµ– Address + InitialBalanceï¼Œ
		// PublicKey / PrivateKey ä¸»è¦ç”¨äºé…ç½®ä¸åç»­è´¦æˆ·ç®¡ç†ï¼Œä¸å¼ºåˆ¶è¦æ±‚åœ¨æ­¤å¤„å…¨éƒ¨ç»™å‡ºã€‚
		// createGenesisTransactions() ä¼šå¯¹ Address åšæ›´ä¸¥æ ¼çš„æ ¡éªŒã€‚
		if account.InitialBalance == "" || account.InitialBalance == "0" {
			return fmt.Errorf("ç¬¬%dä¸ªåˆ›ä¸–è´¦æˆ·çš„åˆå§‹ä½™é¢ä¸èƒ½ä¸ºç©ºæˆ–ä¸º0", i)
		}
	}

	return nil
}

// validateCreatedGenesisBlock éªŒè¯åˆ›å»ºçš„åˆ›ä¸–åŒºå—
func validateCreatedGenesisBlock(block *core.Block) error {
	if block == nil {
		return fmt.Errorf("åˆ›ä¸–åŒºå—ä¸èƒ½ä¸ºç©º")
	}

	if block.Header == nil {
		return fmt.Errorf("åˆ›ä¸–åŒºå—å¤´ä¸èƒ½ä¸ºç©º")
	}

	if block.Body == nil {
		return fmt.Errorf("åˆ›ä¸–åŒºå—ä½“ä¸èƒ½ä¸ºç©º")
	}

	// éªŒè¯åˆ›ä¸–åŒºå—çš„ç‰¹æ®Šå±æ€§
	if block.Header.Height != 0 {
		return fmt.Errorf("åˆ›ä¸–åŒºå—é«˜åº¦å¿…é¡»ä¸º0ï¼Œå½“å‰ä¸º: %d", block.Header.Height)
	}

	// éªŒè¯çˆ¶åŒºå—å“ˆå¸Œä¸ºå…¨é›¶
	if len(block.Header.PreviousHash) != 32 {
		return fmt.Errorf("åˆ›ä¸–åŒºå—çˆ¶å“ˆå¸Œé•¿åº¦å¿…é¡»ä¸º32å­—èŠ‚ï¼Œå½“å‰ä¸º: %d", len(block.Header.PreviousHash))
	}

	for _, b := range block.Header.PreviousHash {
		if b != 0 {
			return fmt.Errorf("åˆ›ä¸–åŒºå—çˆ¶å“ˆå¸Œå¿…é¡»ä¸ºå…¨é›¶")
		}
	}

	if block.Header.Timestamp == 0 {
		return fmt.Errorf("åˆ›ä¸–åŒºå—æ—¶é—´æˆ³ä¸èƒ½ä¸º0")
	}

	return nil
}

// verifyGenesisState éªŒè¯åˆ›ä¸–åçš„é“¾çŠ¶æ€
func verifyGenesisState(ctx context.Context, queryService persistence.QueryService, logger log.Logger) error {
	if logger != nil {
		logger.Info("ğŸ” å¼€å§‹éªŒè¯åˆ›ä¸–åé“¾çŠ¶æ€...")
	}

	// 1. æ£€æŸ¥é“¾æ˜¯å¦å·²æ ‡è®°ä¸ºåˆå§‹åŒ–
	if logger != nil {
		logger.Info("ğŸ” æ­£åœ¨è·å–é“¾é«˜åº¦...")
	}
	height, err := queryService.GetCurrentHeight(ctx)
	if err != nil {
		if logger != nil {
			logger.Errorf("âŒ è·å–é“¾é«˜åº¦å¤±è´¥: %v", err)
		}
		return fmt.Errorf("è·å–é“¾é«˜åº¦å¤±è´¥: %w", err)
	}
	if logger != nil {
		logger.Infof("âœ… è·å–åˆ°é“¾é«˜åº¦: %d", height)
	}

	if height != 0 {
		return fmt.Errorf("åˆ›ä¸–åé“¾é«˜åº¦åº”è¯¥ä¸º0ï¼Œå½“å‰ä¸º: %d", height)
	}

	if logger != nil {
		logger.Info("ğŸ” æ­£åœ¨è·å–æœ€ä½³åŒºå—å“ˆå¸Œ...")
	}
	hash, err := queryService.GetBestBlockHash(ctx)
	if err != nil {
		if logger != nil {
			logger.Errorf("âŒ è·å–æœ€ä½³åŒºå—å“ˆå¸Œå¤±è´¥: %v", err)
		}
		return fmt.Errorf("è·å–æœ€ä½³åŒºå—å“ˆå¸Œå¤±è´¥: %w", err)
	}
	if logger != nil {
		logger.Infof("âœ… è·å–åˆ°åŒºå—å“ˆå¸Œï¼Œé•¿åº¦: %d", len(hash))
	}

	if len(hash) == 0 {
		return fmt.Errorf("åˆ›ä¸–åé“¾å“ˆå¸Œä¸èƒ½ä¸ºç©º")
	}

	if logger != nil {
		logger.Infof("âœ… åˆ›ä¸–åé“¾çŠ¶æ€éªŒè¯é€šè¿‡ - é«˜åº¦: %d, å“ˆå¸Œ: %x", height, hash[:min(8, len(hash))])
	}

	return nil
}

// min è¿”å›ä¸¤ä¸ªæ•´æ•°ä¸­çš„è¾ƒå°å€¼
func min(a, b int) int {
	if a < b {
		return a
	}
	return b
}
