package hostabi

import (
	"context"
	"testing"
	"time"

	"github.com/stretchr/testify/assert"
	"google.golang.org/grpc"

	"github.com/weisyn/v1/internal/core/ispc/testutil"
	ispcInterfaces "github.com/weisyn/v1/internal/core/ispc/interfaces"
	utxo "github.com/weisyn/v1/pb/blockchain/utxo"
	core "github.com/weisyn/v1/pb/blockchain/block"
	pb "github.com/weisyn/v1/pb/blockchain/block/transaction"
	pb_resource "github.com/weisyn/v1/pb/blockchain/block/transaction/resource"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/crypto"
	"github.com/weisyn/v1/pkg/types"
)

// ============================================================================
// HostFunctionProvider æµ‹è¯•
// ============================================================================
//
// ğŸ¯ **æµ‹è¯•ç›®çš„**ï¼šå‘ç° HostFunctionProvider çš„ç¼ºé™·å’ŒBUG
//
// ============================================================================

// TestNewHostFunctionProvider æµ‹è¯•åˆ›å»ºHostFunctionProvider
func TestNewHostFunctionProvider(t *testing.T) {
	logger := testutil.NewTestLogger()
	mockUTXOQuery := &mockUTXOQueryForProvider{}
	mockCASStorage := &mockCASStorageForProvider{}
	mockDraftService := &mockDraftServiceForProvider{}
	mockTxAdapter := &mockTxAdapterForProvider{}
	mockTxHashClient := &mockTxHashServiceClientForProvider{}
	mockAddressManager := &mockAddressManagerForProvider{}

	provider := NewHostFunctionProvider(
		logger,
		mockUTXOQuery,
		mockCASStorage,
		mockDraftService,
		mockTxAdapter,
		mockTxHashClient,
		mockAddressManager,
	)

	assert.NotNil(t, provider, "HostFunctionProvideråº”è¯¥è¢«åˆ›å»º")
	assert.Equal(t, logger, provider.logger, "loggeråº”è¯¥è¢«è®¾ç½®")
	assert.Equal(t, mockUTXOQuery, provider.eutxoQuery, "eutxoQueryåº”è¯¥è¢«è®¾ç½®")
	assert.Equal(t, mockCASStorage, provider.uresCAS, "uresCASåº”è¯¥è¢«è®¾ç½®")
	assert.Equal(t, mockDraftService, provider.draftService, "draftServiceåº”è¯¥è¢«è®¾ç½®")
	assert.Equal(t, mockTxAdapter, provider.txAdapter, "txAdapteråº”è¯¥è¢«è®¾ç½®")
	assert.Equal(t, mockTxHashClient, provider.txHashClient, "txHashClientåº”è¯¥è¢«è®¾ç½®")
	assert.Equal(t, mockAddressManager, provider.addressManager, "addressManageråº”è¯¥è¢«è®¾ç½®")
	assert.True(t, provider.cacheEnabled, "ç¼“å­˜åº”è¯¥é»˜è®¤å¯ç”¨")
	assert.NotNil(t, provider.primitiveCache, "primitiveCacheåº”è¯¥è¢«åˆ›å»º")
}

// TestNewHostFunctionProviderWithCache æµ‹è¯•åˆ›å»ºå¸¦ç¼“å­˜é…ç½®çš„HostFunctionProvider
func TestNewHostFunctionProviderWithCache(t *testing.T) {
	logger := testutil.NewTestLogger()
	mockUTXOQuery := &mockUTXOQueryForProvider{}
	mockCASStorage := &mockCASStorageForProvider{}
	mockDraftService := &mockDraftServiceForProvider{}
	mockTxAdapter := &mockTxAdapterForProvider{}
	mockTxHashClient := &mockTxHashServiceClientForProvider{}
	mockAddressManager := &mockAddressManagerForProvider{}

	tests := []struct {
		name        string
		enableCache bool
		cacheSize   int
		cacheTTL    time.Duration
	}{
		{"å¯ç”¨ç¼“å­˜", true, 100, 30 * time.Second},
		{"ç¦ç”¨ç¼“å­˜", false, 0, 0},
		{"å¤§ç¼“å­˜", true, 1000, 5 * time.Minute},
	}

	for _, tt := range tests {
		t.Run(tt.name, func(t *testing.T) {
			provider := NewHostFunctionProviderWithCache(
				logger,
				mockUTXOQuery,
				mockCASStorage,
				mockDraftService,
				mockTxAdapter,
				mockTxHashClient,
				mockAddressManager,
				tt.enableCache,
				tt.cacheSize,
				tt.cacheTTL,
			)

			assert.NotNil(t, provider, "HostFunctionProvideråº”è¯¥è¢«åˆ›å»º")
			assert.Equal(t, tt.enableCache, provider.cacheEnabled, "cacheEnabledåº”è¯¥æ­£ç¡®è®¾ç½®")
			if tt.enableCache {
				assert.NotNil(t, provider.primitiveCache, "primitiveCacheåº”è¯¥è¢«åˆ›å»º")
			} else {
				assert.Nil(t, provider.primitiveCache, "primitiveCacheåº”è¯¥ä¸ºnil")
			}
		})
	}
}

// TestHostFunctionProvider_SetMethods æµ‹è¯•å„ç§Setæ–¹æ³•
func TestHostFunctionProvider_SetMethods(t *testing.T) {
	provider := createTestHostFunctionProvider(t)

	mockChainQuery := &mockChainQueryForProvider{}
	mockBlockQuery := &mockBlockQueryForProvider{}
	mockTxQuery := &mockTxQueryForProvider{}
	mockResourceQuery := &mockResourceQueryForProvider{}
	mockHashManager := testutil.NewTestHashManager()
	mockTxAdapter := &mockTxAdapterForProvider{}

	provider.SetChainQuery(mockChainQuery)
	assert.Equal(t, mockChainQuery, provider.chainQuery, "chainQueryåº”è¯¥è¢«è®¾ç½®")

	provider.SetBlockQuery(mockBlockQuery)
	assert.Equal(t, mockBlockQuery, provider.blockQuery, "blockQueryåº”è¯¥è¢«è®¾ç½®")

	provider.SetTxQuery(mockTxQuery)
	assert.Equal(t, mockTxQuery, provider.txQuery, "txQueryåº”è¯¥è¢«è®¾ç½®")

	provider.SetResourceQuery(mockResourceQuery)
	assert.Equal(t, mockResourceQuery, provider.resourceQuery, "resourceQueryåº”è¯¥è¢«è®¾ç½®")

	provider.SetHashManager(mockHashManager)
	assert.Equal(t, mockHashManager, provider.hashManager, "hashManageråº”è¯¥è¢«è®¾ç½®")

	provider.SetTxAdapter(mockTxAdapter)
	assert.Equal(t, mockTxAdapter, provider.txAdapter, "txAdapteråº”è¯¥è¢«è®¾ç½®")
}

// TestWithExecutionContext æµ‹è¯•WithExecutionContext
func TestWithExecutionContext(t *testing.T) {
	ctx := context.Background()
	mockExecCtx := createMockExecutionContextForProvider()

	newCtx := WithExecutionContext(ctx, mockExecCtx)
	assert.NotEqual(t, ctx, newCtx, "åº”è¯¥è¿”å›æ–°çš„context")

	// éªŒè¯å¯ä»¥ä»contextä¸­æå–
	extracted := GetExecutionContext(newCtx)
	assert.Equal(t, mockExecCtx, extracted, "åº”è¯¥èƒ½æ­£ç¡®æå–ExecutionContext")
}

// TestGetExecutionContext æµ‹è¯•GetExecutionContext
func TestGetExecutionContext(t *testing.T) {
	tests := []struct {
		name     string
		setupCtx func() context.Context
		wantNil  bool
	}{
		{
			name: "åŒ…å«ExecutionContext",
			setupCtx: func() context.Context {
				ctx := context.Background()
				mockExecCtx := createMockExecutionContextForProvider()
				return WithExecutionContext(ctx, mockExecCtx)
			},
			wantNil: false,
		},
		{
			name: "ä¸åŒ…å«ExecutionContext",
			setupCtx: func() context.Context {
				return context.Background()
			},
			wantNil: true,
		},
		{
			name: "é”™è¯¯çš„ç±»å‹",
			setupCtx: func() context.Context {
				ctx := context.Background()
				return context.WithValue(ctx, executionContextKey, "invalid-type")
			},
			wantNil: true,
		},
	}

	for _, tt := range tests {
		t.Run(tt.name, func(t *testing.T) {
			ctx := tt.setupCtx()
			result := GetExecutionContext(ctx)
			if tt.wantNil {
				assert.Nil(t, result, "åº”è¯¥è¿”å›nil")
			} else {
				assert.NotNil(t, result, "åº”è¯¥è¿”å›ExecutionContext")
			}
		})
	}
}

// TestHostFunctionProvider_GetWASMHostFunctions_MissingExecutionContext æµ‹è¯•ç¼ºå°‘ExecutionContext
func TestHostFunctionProvider_GetWASMHostFunctions_MissingExecutionContext(t *testing.T) {
	provider := createTestHostFunctionProvider(t)
	provider.SetChainQuery(&mockChainQueryForProvider{})

	ctx := context.Background() // æ²¡æœ‰è®¾ç½®ExecutionContext
	_, err := provider.GetWASMHostFunctions(ctx, "exec-123")

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.Contains(t, err.Error(), "ExecutionContext æœªåœ¨ context ä¸­è®¾ç½®", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestHostFunctionProvider_GetWASMHostFunctions_InvalidExecutionContextType æµ‹è¯•æ— æ•ˆçš„ExecutionContextç±»å‹
func TestHostFunctionProvider_GetWASMHostFunctions_InvalidExecutionContextType(t *testing.T) {
	provider := createTestHostFunctionProvider(t)
	provider.SetChainQuery(&mockChainQueryForProvider{})

	ctx := context.WithValue(context.Background(), executionContextKey, "invalid-type")
	_, err := provider.GetWASMHostFunctions(ctx, "exec-123")

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.Contains(t, err.Error(), "ç±»å‹ä¸æ­£ç¡®", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestHostFunctionProvider_GetWASMHostFunctions_MissingChainQuery æµ‹è¯•ç¼ºå°‘chainQuery
func TestHostFunctionProvider_GetWASMHostFunctions_MissingChainQuery(t *testing.T) {
	provider := createTestHostFunctionProvider(t)
	ctx := context.Background()
	mockExecCtx := createMockExecutionContextForProvider()
	ctx = WithExecutionContext(ctx, mockExecCtx)

	// ä¸è®¾ç½®chainQuery
	_, err := provider.GetWASMHostFunctions(ctx, "exec-123")

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.Contains(t, err.Error(), "chainQuery æœªè®¾ç½®", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestHostFunctionProvider_GetWASMHostFunctions_Success æµ‹è¯•æˆåŠŸè·å–WASMå®¿ä¸»å‡½æ•°
func TestHostFunctionProvider_GetWASMHostFunctions_Success(t *testing.T) {
	provider := createTestHostFunctionProvider(t)
	provider.SetChainQuery(&mockChainQueryForProvider{})
	provider.SetBlockQuery(&mockBlockQueryForProvider{})
	provider.SetTxQuery(&mockTxQueryForProvider{})
	provider.SetResourceQuery(&mockResourceQueryForProvider{})
	provider.SetHashManager(testutil.NewTestHashManager())

	ctx := context.Background()
	mockExecCtx := createMockExecutionContextForProvider()
	ctx = WithExecutionContext(ctx, mockExecCtx)

	functions, err := provider.GetWASMHostFunctions(ctx, "exec-123")

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸ")
	assert.NotNil(t, functions, "åº”è¯¥è¿”å›å‡½æ•°æ˜ å°„")
	// æ³¨æ„ï¼šç”±äºä½¿ç”¨äº†çœŸå®çš„WASMAdapterï¼Œå‡½æ•°æ˜ å°„å¯èƒ½ä¸ºç©ºæˆ–åŒ…å«å‡½æ•°
	// è¿™é‡Œä¸»è¦æµ‹è¯•é”™è¯¯è·¯å¾„ï¼ŒæˆåŠŸè·¯å¾„éœ€è¦å®Œæ•´çš„ä¾èµ–è®¾ç½®
	if err == nil {
		assert.NotNil(t, functions, "åº”è¯¥è¿”å›å‡½æ•°æ˜ å°„ï¼ˆå¯èƒ½ä¸ºç©ºï¼‰")
	}
}

// TestHostFunctionProvider_GetONNXHostFunctions_MissingExecutionContext æµ‹è¯•ONNXç¼ºå°‘ExecutionContextï¼ˆåº”è¯¥è¿”å›ç©ºæ˜ å°„ï¼‰
func TestHostFunctionProvider_GetONNXHostFunctions_MissingExecutionContext(t *testing.T) {
	provider := createTestHostFunctionProvider(t)
	provider.SetChainQuery(&mockChainQueryForProvider{})

	ctx := context.Background() // æ²¡æœ‰è®¾ç½®ExecutionContext
	functions, err := provider.GetONNXHostFunctions(ctx, "exec-123")

	assert.NoError(t, err, "ONNXåº”è¯¥å…è®¸ç¼ºå°‘ExecutionContext")
	assert.NotNil(t, functions, "åº”è¯¥è¿”å›å‡½æ•°æ˜ å°„")
	assert.Equal(t, 0, len(functions), "åº”è¯¥è¿”å›ç©ºæ˜ å°„")
}

// TestHostFunctionProvider_GetONNXHostFunctions_Success æµ‹è¯•æˆåŠŸè·å–ONNXå®¿ä¸»å‡½æ•°
func TestHostFunctionProvider_GetONNXHostFunctions_Success(t *testing.T) {
	provider := createTestHostFunctionProvider(t)
	provider.SetChainQuery(&mockChainQueryForProvider{})
	provider.SetBlockQuery(&mockBlockQueryForProvider{})
	provider.SetTxQuery(&mockTxQueryForProvider{})
	provider.SetResourceQuery(&mockResourceQueryForProvider{})
	provider.SetHashManager(testutil.NewTestHashManager())

	ctx := context.Background()
	mockExecCtx := createMockExecutionContextForProvider()
	ctx = WithExecutionContext(ctx, mockExecCtx)

	functions, err := provider.GetONNXHostFunctions(ctx, "exec-123")

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸ")
	assert.NotNil(t, functions, "åº”è¯¥è¿”å›å‡½æ•°æ˜ å°„")
	// æ³¨æ„ï¼šONNXå®¿ä¸»å‡½æ•°å¯èƒ½ä¸ºç©ºæˆ–åŒ…å«å‡½æ•°
	// è¿™é‡Œä¸»è¦æµ‹è¯•é”™è¯¯è·¯å¾„ï¼ŒæˆåŠŸè·¯å¾„éœ€è¦å®Œæ•´çš„ä¾èµ–è®¾ç½®
	if err == nil {
		assert.NotNil(t, functions, "åº”è¯¥è¿”å›å‡½æ•°æ˜ å°„ï¼ˆå¯èƒ½ä¸ºç©ºï¼‰")
	}
}

// TestHostFunctionProvider_GetCacheStats æµ‹è¯•è·å–ç¼“å­˜ç»Ÿè®¡
func TestHostFunctionProvider_GetCacheStats(t *testing.T) {
	tests := []struct {
		name        string
		enableCache bool
		wantNil     bool
	}{
		{"ç¼“å­˜å¯ç”¨", true, false},
		{"ç¼“å­˜ç¦ç”¨", false, true},
	}

	for _, tt := range tests {
		t.Run(tt.name, func(t *testing.T) {
			provider := createTestHostFunctionProviderWithCache(t, tt.enableCache, 100, time.Minute)
			stats := provider.GetCacheStats()

			if tt.wantNil {
				assert.Nil(t, stats, "åº”è¯¥è¿”å›nil")
			} else {
				assert.NotNil(t, stats, "åº”è¯¥è¿”å›ç»Ÿè®¡ä¿¡æ¯")
			}
		})
	}
}

// TestHostFunctionProvider_ClearCache æµ‹è¯•æ¸…ç©ºç¼“å­˜
func TestHostFunctionProvider_ClearCache(t *testing.T) {
	provider := createTestHostFunctionProvider(t)
	assert.NotNil(t, provider.primitiveCache, "ç¼“å­˜åº”è¯¥å­˜åœ¨")

	// æ¸…ç©ºç¼“å­˜ä¸åº”è¯¥panic
	assert.NotPanics(t, func() {
		provider.ClearCache()
	}, "æ¸…ç©ºç¼“å­˜ä¸åº”è¯¥panic")
}

// TestHostFunctionProvider_SetExecutionContext_Deprecated æµ‹è¯•åºŸå¼ƒçš„SetExecutionContextæ–¹æ³•
func TestHostFunctionProvider_SetExecutionContext_Deprecated(t *testing.T) {
	provider := createTestHostFunctionProvider(t)

	// åºŸå¼ƒæ–¹æ³•åº”è¯¥ä¸panicï¼Œä¹Ÿä¸åšä»»ä½•æ“ä½œ
	assert.NotPanics(t, func() {
		provider.SetExecutionContext("any-value")
	}, "åºŸå¼ƒæ–¹æ³•ä¸åº”è¯¥panic")
}

// ============================================================================
// è¾…åŠ©å‡½æ•°
// ============================================================================

// createTestHostFunctionProvider åˆ›å»ºæµ‹è¯•ç”¨çš„HostFunctionProvider
func createTestHostFunctionProvider(t *testing.T) *HostFunctionProvider {
	t.Helper()

	logger := testutil.NewTestLogger()
	mockUTXOQuery := &mockUTXOQueryForProvider{}
	mockCASStorage := &mockCASStorageForProvider{}
	mockDraftService := &mockDraftServiceForProvider{}
	mockTxAdapter := &mockTxAdapterForProvider{}
	mockTxHashClient := &mockTxHashServiceClientForProvider{}
	mockAddressManager := &mockAddressManagerForProvider{}

	return NewHostFunctionProvider(
		logger,
		mockUTXOQuery,
		mockCASStorage,
		mockDraftService,
		mockTxAdapter,
		mockTxHashClient,
		mockAddressManager,
	)
}

// createTestHostFunctionProviderWithCache åˆ›å»ºå¸¦ç¼“å­˜é…ç½®çš„æµ‹è¯•ç”¨HostFunctionProvider
func createTestHostFunctionProviderWithCache(t *testing.T, enableCache bool, cacheSize int, cacheTTL time.Duration) *HostFunctionProvider {
	t.Helper()

	logger := testutil.NewTestLogger()
	mockUTXOQuery := &mockUTXOQueryForProvider{}
	mockCASStorage := &mockCASStorageForProvider{}
	mockDraftService := &mockDraftServiceForProvider{}
	mockTxAdapter := &mockTxAdapterForProvider{}
	mockTxHashClient := &mockTxHashServiceClientForProvider{}
	mockAddressManager := &mockAddressManagerForProvider{}

	return NewHostFunctionProviderWithCache(
		logger,
		mockUTXOQuery,
		mockCASStorage,
		mockDraftService,
		mockTxAdapter,
		mockTxHashClient,
		mockAddressManager,
		enableCache,
		cacheSize,
		cacheTTL,
	)
}

// createMockExecutionContextForProvider åˆ›å»ºMockçš„ExecutionContext
func createMockExecutionContextForProvider() ispcInterfaces.ExecutionContext {
	return &mockExecutionContextForProvider{
		executionID:      "exec-123",
		callerAddress:    make([]byte, 20),
		contractAddress:  make([]byte, 20),
		txID:             make([]byte, 32),
		chainID:          []byte("test-chain"),
		blockHeight:      100,
		blockTimestamp:   1234567890,
		draftID:          "draft-123",
	}
}

// ============================================================================
// Mockå¯¹è±¡å®šä¹‰
// ============================================================================

// mockExecutionContextForProvider Mockçš„ExecutionContext
type mockExecutionContextForProvider struct {
	executionID     string
	callerAddress   []byte
	contractAddress []byte
	txID            []byte
	chainID         []byte
	blockHeight     uint64
	blockTimestamp  uint64
	draftID         string
}

func (m *mockExecutionContextForProvider) GetExecutionID() string { return m.executionID }
func (m *mockExecutionContextForProvider) GetDraftID() string { return m.draftID }
func (m *mockExecutionContextForProvider) GetBlockHeight() uint64 { return m.blockHeight }
func (m *mockExecutionContextForProvider) GetBlockTimestamp() uint64 { return m.blockTimestamp }
func (m *mockExecutionContextForProvider) GetChainID() []byte { return m.chainID }
func (m *mockExecutionContextForProvider) GetTransactionID() []byte { return m.txID }
func (m *mockExecutionContextForProvider) GetCallerAddress() []byte { return m.callerAddress }
func (m *mockExecutionContextForProvider) GetContractAddress() []byte { return m.contractAddress }
func (m *mockExecutionContextForProvider) HostABI() ispcInterfaces.HostABI { return nil }
func (m *mockExecutionContextForProvider) SetHostABI(hostABI ispcInterfaces.HostABI) error { return nil }
func (m *mockExecutionContextForProvider) GetTransactionDraft() (*ispcInterfaces.TransactionDraft, error) { return nil, nil }
func (m *mockExecutionContextForProvider) UpdateTransactionDraft(draft *ispcInterfaces.TransactionDraft) error { return nil }
func (m *mockExecutionContextForProvider) RecordHostFunctionCall(call *ispcInterfaces.HostFunctionCall) {}
func (m *mockExecutionContextForProvider) GetExecutionTrace() ([]*ispcInterfaces.HostFunctionCall, error) { return nil, nil }
func (m *mockExecutionContextForProvider) RecordStateChange(key string, oldValue interface{}, newValue interface{}) error { return nil }
func (m *mockExecutionContextForProvider) RecordTraceRecords(records []ispcInterfaces.TraceRecord) error { return nil }
func (m *mockExecutionContextForProvider) GetResourceUsage() *types.ResourceUsage { return nil }
func (m *mockExecutionContextForProvider) FinalizeResourceUsage() {}
func (m *mockExecutionContextForProvider) SetReturnData(data []byte) error { return nil }
func (m *mockExecutionContextForProvider) GetReturnData() ([]byte, error) { return nil, nil }
func (m *mockExecutionContextForProvider) AddEvent(event *ispcInterfaces.Event) error { return nil }
func (m *mockExecutionContextForProvider) GetEvents() ([]*ispcInterfaces.Event, error) { return nil, nil }
func (m *mockExecutionContextForProvider) SetInitParams(params []byte) error { return nil }
func (m *mockExecutionContextForProvider) GetInitParams() ([]byte, error) { return nil, nil }

// mockUTXOQueryForProvider Mockçš„UTXOæŸ¥è¯¢æœåŠ¡
type mockUTXOQueryForProvider struct{}

func (m *mockUTXOQueryForProvider) GetUTXO(ctx context.Context, outpoint *pb.OutPoint) (*utxo.UTXO, error) { return nil, nil }
func (m *mockUTXOQueryForProvider) GetUTXOsByAddress(ctx context.Context, address []byte, category *utxo.UTXOCategory, onlyAvailable bool) ([]*utxo.UTXO, error) { return nil, nil }
func (m *mockUTXOQueryForProvider) GetSponsorPoolUTXOs(ctx context.Context, onlyAvailable bool) ([]*utxo.UTXO, error) { return nil, nil }
func (m *mockUTXOQueryForProvider) GetCurrentStateRoot(ctx context.Context) ([]byte, error) { return nil, nil }

// mockCASStorageForProvider Mockçš„CASå­˜å‚¨
type mockCASStorageForProvider struct{}

func (m *mockCASStorageForProvider) BuildFilePath(contentHash []byte) string { return "" }
func (m *mockCASStorageForProvider) StoreFile(ctx context.Context, contentHash []byte, data []byte) error { return nil }
func (m *mockCASStorageForProvider) ReadFile(ctx context.Context, contentHash []byte) ([]byte, error) { return nil, nil }
func (m *mockCASStorageForProvider) FileExists(contentHash []byte) bool { return false }

// å®ç° ures.CASStorage æ¥å£çš„å…¶ä»–æ–¹æ³•ï¼ˆå¦‚æœéœ€è¦ï¼‰
func (m *mockCASStorageForProvider) GetResourceByContentHash(ctx context.Context, contentHash []byte) (interface{}, error) { return nil, nil }
func (m *mockCASStorageForProvider) StoreResource(ctx context.Context, contentHash []byte, resource interface{}) error { return nil }

// mockDraftServiceForProvider Mockçš„äº¤æ˜“è‰ç¨¿æœåŠ¡
type mockDraftServiceForProvider struct{}

func (m *mockDraftServiceForProvider) CreateDraft(ctx context.Context) (*types.DraftTx, error) { return nil, nil }
func (m *mockDraftServiceForProvider) LoadDraft(ctx context.Context, draftID string) (*types.DraftTx, error) { return nil, nil }
func (m *mockDraftServiceForProvider) SaveDraft(ctx context.Context, draft *types.DraftTx) error { return nil }
func (m *mockDraftServiceForProvider) GetDraftByID(ctx context.Context, draftID string) (*types.DraftTx, error) { return nil, nil }
func (m *mockDraftServiceForProvider) ValidateDraft(ctx context.Context, draft *types.DraftTx) error { return nil }
func (m *mockDraftServiceForProvider) SealDraft(ctx context.Context, draft *types.DraftTx) (*types.ComposedTx, error) { return nil, nil }
func (m *mockDraftServiceForProvider) DeleteDraft(ctx context.Context, draftID string) error { return nil }
func (m *mockDraftServiceForProvider) AddInput(ctx context.Context, draft *types.DraftTx, outpoint *pb.OutPoint, isReferenceOnly bool, unlockingProof *pb.UnlockingProof) (uint32, error) { return 0, nil }
func (m *mockDraftServiceForProvider) AddAssetOutput(ctx context.Context, draft *types.DraftTx, owner []byte, amount string, tokenID []byte, lockingConditions []*pb.LockingCondition) (uint32, error) { return 0, nil }
func (m *mockDraftServiceForProvider) AddResourceOutput(ctx context.Context, draft *types.DraftTx, contentHash []byte, category string, owner []byte, lockingConditions []*pb.LockingCondition, metadata []byte) (uint32, error) { return 0, nil }
func (m *mockDraftServiceForProvider) AddStateOutput(ctx context.Context, draft *types.DraftTx, stateID []byte, stateVersion uint64, executionResultHash []byte, publicInputs []byte, parentStateHash []byte) (uint32, error) { return 0, nil }

// mockTxAdapterForProvider Mockçš„TXé€‚é…å™¨
type mockTxAdapterForProvider struct{}

func (m *mockTxAdapterForProvider) BeginTransaction(ctx context.Context, blockHeight uint64, blockTimestamp uint64) (int32, error) { return 0, nil }
func (m *mockTxAdapterForProvider) AddTransfer(ctx context.Context, draftHandle int32, from []byte, to []byte, amount string, tokenID []byte) (int32, error) { return 0, nil }
func (m *mockTxAdapterForProvider) AddCustomInput(ctx context.Context, draftHandle int32, outpoint *pb.OutPoint, isReferenceOnly bool) (int32, error) { return 0, nil }
func (m *mockTxAdapterForProvider) AddCustomOutput(ctx context.Context, draftHandle int32, output *pb.TxOutput) (int32, error) { return 0, nil }
func (m *mockTxAdapterForProvider) GetDraft(ctx context.Context, draftHandle int32) (*types.DraftTx, error) { return nil, nil }
func (m *mockTxAdapterForProvider) FinalizeTransaction(ctx context.Context, draftHandle int32) (*pb.Transaction, error) { return nil, nil }
func (m *mockTxAdapterForProvider) CleanupDraft(ctx context.Context, draftHandle int32) error { return nil }

// mockTxHashServiceClientForProvider Mockçš„äº¤æ˜“å“ˆå¸ŒæœåŠ¡å®¢æˆ·ç«¯
type mockTxHashServiceClientForProvider struct{}

func (m *mockTxHashServiceClientForProvider) ComputeHash(ctx context.Context, in *pb.ComputeHashRequest, opts ...grpc.CallOption) (*pb.ComputeHashResponse, error) {
	return &pb.ComputeHashResponse{Hash: make([]byte, 32)}, nil
}
func (m *mockTxHashServiceClientForProvider) ValidateHash(ctx context.Context, in *pb.ValidateHashRequest, opts ...grpc.CallOption) (*pb.ValidateHashResponse, error) {
	return &pb.ValidateHashResponse{IsValid: true}, nil
}
func (m *mockTxHashServiceClientForProvider) ComputeSignatureHash(ctx context.Context, in *pb.ComputeSignatureHashRequest, opts ...grpc.CallOption) (*pb.ComputeSignatureHashResponse, error) {
	return &pb.ComputeSignatureHashResponse{Hash: make([]byte, 32)}, nil
}
func (m *mockTxHashServiceClientForProvider) ValidateSignatureHash(ctx context.Context, in *pb.ValidateSignatureHashRequest, opts ...grpc.CallOption) (*pb.ValidateSignatureHashResponse, error) {
	return &pb.ValidateSignatureHashResponse{IsValid: true}, nil
}

// mockAddressManagerForProvider Mockçš„åœ°å€ç®¡ç†å™¨
type mockAddressManagerForProvider struct{}

func (m *mockAddressManagerForProvider) PrivateKeyToAddress(privateKey []byte) (string, error) { return "test-address", nil }
func (m *mockAddressManagerForProvider) PublicKeyToAddress(publicKey []byte) (string, error) { return "test-address", nil }
func (m *mockAddressManagerForProvider) StringToAddress(addressStr string) (string, error) { return "test-address", nil }
func (m *mockAddressManagerForProvider) ValidateAddress(address string) (bool, error) { return true, nil }
func (m *mockAddressManagerForProvider) AddressToBytes(address string) ([]byte, error) { return make([]byte, 20), nil }
func (m *mockAddressManagerForProvider) BytesToAddress(addressBytes []byte) (string, error) { return "test-address", nil }
func (m *mockAddressManagerForProvider) AddressToHexString(address string) (string, error) { return "", nil }
func (m *mockAddressManagerForProvider) HexStringToAddress(hexStr string) (string, error) { return "", nil }
func (m *mockAddressManagerForProvider) GetAddressType(address string) (crypto.AddressType, error) { return crypto.AddressTypeBitcoin, nil }
func (m *mockAddressManagerForProvider) CompareAddresses(addr1, addr2 string) (bool, error) { return true, nil }
func (m *mockAddressManagerForProvider) IsZeroAddress(address string) bool { return false }

// mockChainQueryForProvider Mockçš„é“¾æŸ¥è¯¢æœåŠ¡
type mockChainQueryForProvider struct{}

func (m *mockChainQueryForProvider) GetChainInfo(ctx context.Context) (*types.ChainInfo, error) { return nil, nil }
func (m *mockChainQueryForProvider) GetCurrentHeight(ctx context.Context) (uint64, error) { return 100, nil }
func (m *mockChainQueryForProvider) GetBestBlockHash(ctx context.Context) ([]byte, error) { return make([]byte, 32), nil }
func (m *mockChainQueryForProvider) GetNodeMode(ctx context.Context) (types.NodeMode, error) { return types.NodeModeFull, nil }
func (m *mockChainQueryForProvider) IsDataFresh(ctx context.Context) (bool, error) { return true, nil }
func (m *mockChainQueryForProvider) IsReady(ctx context.Context) (bool, error) { return true, nil }
func (m *mockChainQueryForProvider) GetSyncStatus(ctx context.Context) (*types.SystemSyncStatus, error) { return nil, nil }

// mockBlockQueryForProvider Mockçš„åŒºå—æŸ¥è¯¢æœåŠ¡
type mockBlockQueryForProvider struct{}

func (m *mockBlockQueryForProvider) GetBlockByHeight(ctx context.Context, height uint64) (*core.Block, error) { return nil, nil }
func (m *mockBlockQueryForProvider) GetBlockByHash(ctx context.Context, blockHash []byte) (*core.Block, error) { return nil, nil }
func (m *mockBlockQueryForProvider) GetBlockHeader(ctx context.Context, blockHash []byte) (*core.BlockHeader, error) { return nil, nil }
func (m *mockBlockQueryForProvider) GetBlockRange(ctx context.Context, startHeight, endHeight uint64) ([]*core.Block, error) { return nil, nil }
func (m *mockBlockQueryForProvider) GetHighestBlock(ctx context.Context) (height uint64, blockHash []byte, err error) { return 100, make([]byte, 32), nil }

// mockTxQueryForProvider Mockçš„äº¤æ˜“æŸ¥è¯¢æœåŠ¡
type mockTxQueryForProvider struct{}

func (m *mockTxQueryForProvider) GetTransaction(ctx context.Context, txHash []byte) (blockHash []byte, txIndex uint32, transaction *pb.Transaction, err error) { return nil, 0, nil, nil }
func (m *mockTxQueryForProvider) GetTxBlockHeight(ctx context.Context, txHash []byte) (uint64, error) { return 0, nil }
func (m *mockTxQueryForProvider) GetBlockTimestamp(ctx context.Context, height uint64) (int64, error) { return 0, nil }
func (m *mockTxQueryForProvider) GetAccountNonce(ctx context.Context, address []byte) (uint64, error) { return 0, nil }
func (m *mockTxQueryForProvider) GetTransactionsByBlock(ctx context.Context, blockHash []byte) ([]*pb.Transaction, error) { return nil, nil }

// mockResourceQueryForProvider Mockçš„èµ„æºæŸ¥è¯¢æœåŠ¡
type mockResourceQueryForProvider struct{}

func (m *mockResourceQueryForProvider) GetResourceByContentHash(ctx context.Context, contentHash []byte) (*pb_resource.Resource, error) { return nil, nil }
func (m *mockResourceQueryForProvider) GetResourceFromBlockchain(ctx context.Context, contentHash []byte) (*pb_resource.Resource, bool, error) { return nil, false, nil }
func (m *mockResourceQueryForProvider) GetResourceTransaction(ctx context.Context, contentHash []byte) (txHash, blockHash []byte, blockHeight uint64, err error) { return nil, nil, 0, nil }
func (m *mockResourceQueryForProvider) CheckFileExists(contentHash []byte) bool { return false }
func (m *mockResourceQueryForProvider) BuildFilePath(contentHash []byte) string { return "" }
func (m *mockResourceQueryForProvider) ListResourceHashes(ctx context.Context, offset int, limit int) ([][]byte, error) { return nil, nil }

